--- a/index.html
+++ b/index.html
@@ -1155,7 +1155,7 @@
 <h1 id="_1">업무관리 사용자메뉴얼</h1>
 <p>K-에듀파인 업무관리는 17개 시 ·도교육청과 산하기관, 1만 2천여 개의 초 ·중 ·고등학교 등에 소속된 약 70만여 명의 교직원이 업무에 필수적으로 사용하는 시스템입니다. 업무관리에 대한 기능을 효율적으로 안내하고자 현재 온라인 메뉴얼을 개발중에 있습니다.</p>
 <figure>
-  <img alt="Image title" src="images/_01.png" />
+  <img alt="Image title" src="images/img_01.png" />
   <figcaption>K-에듀파인 업무관리 접속화면</figcaption>
 </figure>
 <h2 id="2025">2025년 주요개선 계획</h2>
