--- a/docu/docu05.html
+++ b/docu/docu05.html
@@ -1355,8 +1355,8 @@
 <ul>
 <li>문서등록대장에서 문서 선택 후 상단 마스킹 버튼을 클릭</li>
 <li>당해연도 문서, 기안자만 처리 가능, 제목만 마스킹 처리 지원</li>
-<li>마스킹 처리 내역이 처리과문서담당자(교육청 설정에 따라 결재선도 포함)에게 내부메일로 발송</li>
-<li>처리과문서담당자만 결재완료 후 마스킹 처리 행위 취소 가능, 취소 시 최종 결재 버전의 제목으로 변경</li>
+<li><strong>마스킹 처리 내역이 처리과문서담당자(교육청 설정에 따라 결재선도 포함)에게 내부메일로 발송</strong></li>
+<li><strong>처리과문서담당자만 결재완료 후 마스킹 처리 행위 취소 가능</strong>, 취소 시 최종 결재 버전의 제목으로 변경</li>
 </ul>
 </div>
 <h2 id="_3">제약사항</h2>
