미작성 qna 삭제

--- a/01_mun-seo-gwan-ri/user_manual_01.html
+++ b/01_mun-seo-gwan-ri/user_manual_01.html
@@ -2706,14 +2706,13 @@
 </ul>
 <h2 id="_3">일반사항</h2>
 <h3 id="_4"><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M10 4H4c-1.11 0-2 .89-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-8z"/></svg></span> 문서처리</h3>
-<p>이송, 반송, 경유, 회신 처리를 위한 필수조건은 아래와 같습니다. 아래 모든 조건을 만족해야 합니다.</p>
-<ul>
-<li>접수문서</li>
-<li>전자문서</li>
-<li>업무담당자 혹은 문서과문서담당자</li>
-<li>결재완료 문서</li>
-<li>유통 수신처가 포함된 문서는 첨부파일 용량이 5MB 이내</li>
-</ul>
+<p>이송, 반송, 경유, 회신 처리를 위한 필수조건은 아래와 같습니다. 아래 모든 조건을 만족해야 합니다.
+공람처리 지연 가능성 안내
+- 접수문서
+- 전자문서
+- 업무담당자 혹은 문서과문서담당자
+- 결재완료 문서
+- 유통 수신처가 포함된 문서는 첨부파일 용량이 5MB 이내</p>
 <div class="admonition tip">
 <p class="admonition-title">반송 및 경유 처리 방법</p>
 <p>수신된 문서를 발신한 기관으로 되돌려 보내기 위한 반송처리 방법은 아래와 같습니다.</p>
@@ -3311,10 +3310,6 @@
 <li>접수공문게시된 문서</li>
 </ul>
 </div>
-<div class="admonition warning">
-<p class="admonition-title"><mark>공람처리 지연 가능성 안내</mark></p>
-<p>접수 처리 시 업무담당자가 공람자를 추가하면 공람자 목록은 XML에 일차 저장되어 최종 결재 전에도 문서관리카드에서는 공람내역을 확인은 가능합니다. 최종 결재자가 문서처리를 완료한 이후가 되어야 각 공람자의 공람대기함에서 해당 문서가 조회 됩니다. <strong>결재 처리가 오래 걸린다면 공람자에게 문서 전달이 늦어 질 수 있습니다.</strong></p>
-</div>
 <h4 id="_31">업무담당확인</h4>
 <p>업무담당확인 함에서는 처리과문서담당자가 업무담당확인 요청한 문서를 확인할 수 있습니다.</p>
 <h4 id="_32">과제미지정</h4>
@@ -3527,12 +3522,6 @@
 <li>중단 처리된 문서의 재처리를 위해서는 재기안 필요</li>
 <li>중단된 문서는 문서번호가 공백으로 비어 있음</li>
 <li>기록관리시스템(RMS) 이관 대상으로 기록물의 이관 규격에 문서번호는 필수 정보 아님</li>
-</ul>
-</div>
-<div class="admonition quote">
-<p class="admonition-title"><mark>중단한 문서에 대한 기록물지침</mark></p>
-<ul>
-<li></li>
 </ul>
 </div>
 <h4 id="_46">배부대장</h4>
