배포 내용 추가

--- a/01_mun-seo-gwan-ri/docu02.html
+++ b/01_mun-seo-gwan-ri/docu02.html
@@ -1554,7 +1554,7 @@
 </figure></p>
 <ul>
 <li>문서등록대장에서 문서 선택 후 상단 마스킹 버튼을 클릭</li>
-<li>당해연도 문서, 기안자만 처리 가능, 제목 또는 첨부파일 마스킹 처리 지원</li>
+<li>당해연도 문서, 기안자만 처리 가능, 제목, 첨부파일 제목, 수기로 작성된 수신처 마스킹 처리 가능</li>
 <li>마스킹 처리 내역 DB에 기록 및 <strong>처리과문서담당자(교육청 설정에 따라 결재선도 포함)에게 내부메일로 발송</strong></li>
 <li><strong>처리과문서담당자만 결재완료 후 마스킹 처리 행위 취소 가능</strong>, 취소 시 최종 결재 버전의 제목으로 변경</li>
 </ul>
