--- a/07_mail/user_manual_07.html
+++ b/07_mail/user_manual_07.html
@@ -1757,11 +1757,14 @@
 
 <h1 id="_1">내부메일 사용자교육자료</h1>
 <h2 id="_2">개요</h2>
-<p>내부메일은 K-에듀파인 시스템 내에서 효율성을 높이기 위해 사용자 간 메일 송수신 기능입니다. K-에듀파인 시스템은 폐쇄망으로 운영되므로 외부 인터넷 메일과는 연동되지 않습니다.</p>
+<p>내부메일은 K-에듀파인 시스템 내에서 효율성을 높이기 위해 사용자 간 메일 송수신 기능입니다.
+K-에듀파인 시스템은 폐쇄망으로 운영되므로 외부 인터넷 메일과는 연동되지 않습니다.</p>
 <h2 id="_3">메일작성</h2>
-<p>메일작성 화면은 사용자가 특정 대상에게 내부메일을 작성하여 발송하는 공간입니다. 이 화면은 제목, 수신자, 발송 옵션 등을 설정하는 메일 정보 영역과 내용을 입력하는 본문 영역으로 구성되어 있습니다.</p>
+<p>메일작성 화면은 사용자가 특정 대상에게 내부메일을 작성하여 발송하는 공간입니다.
+이 화면은 제목, 수신자, 발송 옵션 등을 설정하는 메일 정보 영역과 내용을 입력하는 본문 영역으로 구성되어 있습니다.</p>
 <h3 id="_4"><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2zm-2 0-8 5-8-5zm0 12H4V8l8 5 8-5z"/></svg></span> 본문 작성 및 발송</h3>
-<p>사용자는 메일의 제목과 본문을 입력하고 필요한 경우 파일을 첨부하여 메일을 보낼 수 있습니다. 메일 작성을 완료한 후에는 <strong>발신</strong> 버튼을 클릭하여 즉시 메일을 발송하거나 <strong>임시저장</strong> 버튼을 클릭하여 나중에 이어서 작성할 수 있습니다.</p>
+<p>사용자는 메일의 제목과 본문을 입력하고 필요한 경우 파일을 첨부하여 메일을 보낼 수 있습니다.
+메일 작성을 완료한 후에는 <strong>발신</strong> 버튼을 클릭하여 즉시 메일을 발송하거나 <strong>임시저장</strong> 버튼을 클릭하여 나중에 이어서 작성할 수 있습니다.</p>
 <div class="admonition warning">
 <p class="admonition-title">메일 발송 시 제약사항</p>
 <ul>
@@ -1771,7 +1774,7 @@
 </ul>
 </div>
 <details class="info">
-<summary>메일 작성 주요기능 안내</summary>
+<summary>메일 작성 추가기능 안내</summary>
 <ul>
 <li>미리 등록해 둔 서명을 메일 본문 하단에 자동으로 입력 가능, 서명은 최대 4개까지 등록할 수 있으며 그중 하나를 기본 서명으로 지정 가능</li>
 <li>발송 전 작성한 메일이 수신자에게 어떻게 보일지 미리 확인 가능</li>
@@ -1779,7 +1782,7 @@
 </ul>
 </details>
 <details class="info">
-<summary>메일 발송 옵션 주요기능 안내</summary>
+<summary>메일 발송 옵션 설정 안내</summary>
 <ul>
 <li>보안 옵션을 선택하면 수신자가 인증서로 로그인해야만 메일 내용을 확인 가능, 보안메일에 답장하거나 전달할 경우 보안 옵션은 해제</li>
 <li>긴급 옵션을 적용한 메일은 수신자의 메일함에서 수신 일시와 관계없이 목록 최상단에 표시</li>
@@ -1795,8 +1798,10 @@
 <li>엑셀 서식을 다운로드하여 수신자 정보를 입력한 후 파일을 업로드하는 방식으로 다수의 수신자를 한 번에 일괄로 추가</li>
 </ul>
 <h2 id="_6">임시보관함</h2>
-<p><strong>임시보관함</strong>은 사용자가 작성 중에 임시저장한 메일의 목록을 확인하고 관리하는 공간입니다. 이곳에서 메일 작성을 이어서 하거나, 더이상 불필요하면 메일을 삭제할 수 있습니다.
-임시보관된 메일의 제목을 클릭하면 메일작성 화면으로 이동하여 내용을 이어서 작성할 수 있습니다. 재작성 화면에서는 메일을 발송하거나 다시 임시저장하는 것이 가능합니다.</p>
+<p><strong>임시보관함</strong>은 사용자가 작성 중에 임시저장한 메일의 목록을 확인하고 관리하는 공간입니다.
+이곳에서 메일 작성을 이어서 하거나, 더이상 불필요하면 메일을 삭제할 수 있습니다.</p>
+<p>임시보관된 메일의 제목을 클릭하면 메일작성 화면으로 이동하여 내용을 이어서 작성할 수 있습니다.
+재작성 화면에서는 메일을 발송하거나 다시 임시저장하는 것이 가능합니다.</p>
 <div class="admonition info">
 <p class="admonition-title">임시보관 메일 목록 관리방법 안내</p>
 <ul>
@@ -1809,38 +1814,39 @@
 <h2 id="_7">메일함</h2>
 <h3 id="_8"><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2zm-2 0-8 5-8-5zm0 12H4V8l8 5 8-5z"/></svg></span> 미확인수신메일함</h3>
 <p><strong>미확인수신메일함</strong>은 사용자가 수신한 메일 중 아직 확인하지 않은 메일의 목록을 확인하는 공간입니다.
-이 화면에서 메일을 직접 확인하지 않고도 읽음 처리하거나 중요 메일을 별도로 보관하는 등 목록을 관리할 수 있습니다.
-미확인수신메일함에 있는 메일은 시도 교육청 및 개인이 설정한 보관 기간이 지나면 자동으로 휴지통으로 이동되며, 휴지통에서도 보관일이 지나면 영구 삭제됨
-중요한 메일은 삭제되지 않는 개인메일함으로 이동하여 보관하는 것을 권장</p>
+이 화면에서 메일을 직접 확인하지 않고도 읽음 처리하거나 중요 메일을 별도로 보관하는 등 목록을 관리할 수 있습니다.</p>
+<p>미확인수신메일함에 있는 메일은 시도 교육청 및 개인이 설정한 보관 기간이 지나면 자동으로 휴지통으로 이동되며, 휴지통에서도 보관일이 지나면 영구 삭제됩니다.
+중요한 메일은 삭제되지 않는 개인메일함으로 이동하여 보관하는 것을 권장드립니다.</p>
 <h3 id="_9"><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2zm-2 0-8 5-8-5zm0 12H4V8l8 5 8-5z"/></svg></span> 수신메일함</h3>
 <p><strong>수신메일함</strong>은 사용자가 수신한 모든 메일의 목록을 확인하고 관리하는 공간입니다.
 이 화면에서는 메일 목록을 관리하고 메일 내용을 상세히 조회하여 답장, 전달 등의 후속 작업을 수행할 수 있습니다.</p>
 <h3 id="_10"><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2zm-2 0-8 5-8-5zm0 12H4V8l8 5 8-5z"/></svg></span> 발신메일함</h3>
-<p><strong>발신메일함</strong>은 사용자가 발송한 메일의 목록을 확인하고 관리하는 공간입니다. 이 화면은 메일 작성 시 <strong>발신메일저장</strong> 옵션을 선택한 메일만 조회됩니다.
-메일 회수와 같은 주요 기능을 사용하기 위해서는 메일 작성 시 반드시 <strong>발신메일저장</strong> 옵션을 선택해야함</p>
+<p><strong>발신메일함</strong>은 사용자가 발송한 메일의 목록을 확인하고 관리하는 공간입니다.
+이 화면은 메일 작성 시 <strong>발신메일저장</strong> 옵션을 선택한 메일만 조회됩니다.
+메일 회수와 같은 주요 기능을 사용하기 위해서는 메일 작성 시 반드시 <strong>발신메일저장</strong> 옵션을 선택해야합니다.</p>
 <h3 id="_11"><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2zm-2 0-8 5-8-5zm0 12H4V8l8 5 8-5z"/></svg></span> 개인메일함</h3>
 <p><strong>개인메일함</strong>은 사용자가 수신메일함이나 발신메일함에서 중요한 메일을 별도로 보관하기 위해 이동시킨 메일 목록을 확인하고 관리하는 공간입니다.
-사용자는 '메일함관리' 메뉴를 통해 개인메일함을 직접 생성할 수 있으며, 다른 메일함과 달리 개인메일함으로 옮겨진 메일은 설정된 보관 기한이 지나도 자동으로 삭제되지 않는 특징이 있습니다.
-개인메일함 기능은 <strong>메일함관리</strong> 메뉴에서 사용자가 직접 개인메일함을 생성한 후에 사용할 수 있음
-시스템에서 자동으로 삭제되지 않아야 하는 중요 메일은 개인메일함으로 이동하여 보관하는 것을 권장</p>
+사용자는 <strong>메일함관리</strong> 메뉴를 통해 개인메일함을 직접 생성할 수 있으며, 다른 메일함과 달리 개인메일함으로 옮겨진 메일은 설정된 보관 기한이 지나도 자동으로 삭제되지 않는 특징이 있습니다.</p>
+<p>개인메일함 기능은 메일함관리 메뉴에서 사용자가 직접 개인메일함을 생성한 후에 사용할 수 있습니다.
+시스템에서 자동으로 삭제되지 않아야 하는 중요 메일은 개인메일함으로 이동하여 보관하는 것을 권장드립니다.</p>
 <h3 id="_12"><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2zm-2 0-8 5-8-5zm0 12H4V8l8 5 8-5z"/></svg></span> 차단메일함</h3>
 <p><strong>차단메일함</strong>은 사용자가 <strong>내부메일설정</strong>에서 등록한 자동분류규칙(자동필터)에 따라 특정 조건의 메일이 자동으로 이동되어 보관되는 공간입니다.
-차단메일함의 메일은 개인메일함과 달리 영구 보관되지 않음
-시도 교육청 및 개인이 설정한 보관 기간이 지나면 자동으로 휴지통으로 이동되며, 이후 휴지통의 보관 기간이 만료되면 영구 삭제됨</p>
+차단메일함의 메일은 개인메일함과 달리 영구 보관되지 않습니다.
+시도 교육청 및 개인이 설정한 보관 기간이 지나면 자동으로 휴지통으로 이동되며, 이후 휴지통의 보관 기간이 만료되면 영구 삭제됩니다.</p>
 <h3 id="_13"><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2zm-2 0-8 5-8-5zm0 12H4V8l8 5 8-5z"/></svg></span> 휴지통</h3>
 <p><strong>휴지통</strong>은 각 메일함에서 사용자가 삭제한 메일이 영구 삭제되기 전 임시로 보관되는 공간입니다.
 사용자는 삭제했던 메일을 최종적으로 처리하기 전에 이곳에서 목록을 확인하고 복구하거나 영구 삭제할 수 있습니다.
-실수로 삭제한 메일을 선택한 후 <strong>복구</strong> 버튼을 클릭하면 삭제되기 이전의 메일함으로 다시 이동시킬 수 있습니다.
-휴지통으로 이동된 메일은 시도총괄관리자 및 개인이 설정한 보관일이 지나면 자동으로 영구 삭제됨
-자동 또는 수동으로 영구 삭제된 메일은 다시 복구할 수 없으므로 주의가 필요함</p>
+실수로 삭제한 메일을 선택한 후 <strong>복구</strong> 버튼을 클릭하면 삭제되기 이전의 메일함으로 다시 이동시킬 수 있습니다.</p>
+<p>휴지통으로 이동된 메일은 시도총괄관리자 및 개인이 설정한 보관일이 지나면 자동으로 영구 삭제됩니다.
+자동 또는 수동으로 영구 삭제된 메일은 다시 복구할 수 없으므로 주의가 필요합니다.</p>
 <h2 id="_14">메일함 기능</h2>
 <h3 id="_15"><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2zm-2 0-8 5-8-5zm0 12H4V8l8 5 8-5z"/></svg></span> 수신확인</h3>
 <p>발신메일함의 상세화면에서 <strong>수신확인</strong> 버튼을 클릭하면 팝업창을 통해 수신자들이 메일을 읽었는지 여부를 확인할 수 있습니다.
 <strong>개인수신그룹등록</strong> 버튼을 이용하여 현재 메일의 수신자 목록을 개인수신그룹으로 등록할 수 있습니다.</p>
 <h3 id="_16"><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2zm-2 0-8 5-8-5zm0 12H4V8l8 5 8-5z"/></svg></span> 목록화면 기능</h3>
-<div class="tabbed-set tabbed-alternate" data-tabs="1:7"><input checked="checked" id="__tabbed_1_1" name="__tabbed_1" type="radio" /><input id="__tabbed_1_2" name="__tabbed_1" type="radio" /><input id="__tabbed_1_3" name="__tabbed_1" type="radio" /><input id="__tabbed_1_4" name="__tabbed_1" type="radio" /><input id="__tabbed_1_5" name="__tabbed_1" type="radio" /><input id="__tabbed_1_6" name="__tabbed_1" type="radio" /><input id="__tabbed_1_7" name="__tabbed_1" type="radio" /><div class="tabbed-labels"><label for="__tabbed_1_1">메일다운로드</label><label for="__tabbed_1_2">자동분류설정</label><label for="__tabbed_1_3">읽음</label><label for="__tabbed_1_4">이동</label><label for="__tabbed_1_5">회수</label><label for="__tabbed_1_6">삭제</label><label for="__tabbed_1_7">목록저장 및 인쇄</label></div>
-<div class="tabbed-content">
-<div class="tabbed-block">
+<ul>
+<li>
+<p>메일다운로드</p>
 <p class="annotate"><strong>메일다운로드</strong> (1) 버튼을 클릭하여 선택한 메일을 HTML 파일 형태로 PC에 저장할 수 있습니다. 다운로드한 파일은 웹 브라우저를 통해 내용을 확인할 수 있습니다.</p>
 <ol>
 <li><img alt="🙋‍♂️" class="twemoji" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@15.1.0/assets/svg/1f64b-200d-2642-fe0f.svg" title=":man_raising_hand:" /> 메일다운로드 가능화면<ul>
@@ -1854,8 +1860,9 @@
 </ul>
 </li>
 </ol>
-</div>
-<div class="tabbed-block">
+</li>
+<li>
+<p>자동분류설정</p>
 <p class="annotate">특정 메일을 선택하고 <strong>자동분류설정</strong> (1) 버튼을 클릭하여, 앞으로 해당 메일의 제목, 발신자, 또는 본문 내용과 일치하는 메일이 특정 메일함으로 자동 분류되도록 규칙을 설정할 수 있습니다.</p>
 <ol>
 <li><img alt="🙋‍♂️" class="twemoji" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@15.1.0/assets/svg/1f64b-200d-2642-fe0f.svg" title=":man_raising_hand:" /> 자동분류설정 가능화면<ul>
@@ -1865,8 +1872,9 @@
 </ul>
 </li>
 </ol>
-</div>
-<div class="tabbed-block">
+</li>
+<li>
+<p>읽음</p>
 <p class="annotate">메일을 열어보지 않고 목록에서 선택한 후 <strong>읽음</strong> (1) 버튼을 클릭하여 읽음 상태로 변경할 수 있습니다.</p>
 <ol>
 <li><img alt="🙋‍♂️" class="twemoji" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@15.1.0/assets/svg/1f64b-200d-2642-fe0f.svg" title=":man_raising_hand:" /> 읽음 가능화면<ul>
@@ -1876,8 +1884,9 @@
 </ul>
 </li>
 </ol>
-</div>
-<div class="tabbed-block">
+</li>
+<li>
+<p>이동</p>
 <p class="annotate">중요한 메일을 선택하여 <strong>이동</strong> (1) 버튼을 통해 개인메일함으로 옮겨 보관할 수 있습니다. 개인메일함이 미리 생성되어 있어야 이 기능을 사용할 수 있습니다.</p>
 <ol>
 <li><img alt="🙋‍♂️" class="twemoji" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@15.1.0/assets/svg/1f64b-200d-2642-fe0f.svg" title=":man_raising_hand:" /> 이동 가능화면<ul>
@@ -1889,8 +1898,9 @@
 </ul>
 </li>
 </ol>
-</div>
-<div class="tabbed-block">
+</li>
+<li>
+<p>회수</p>
 <p class="annotate">회수 대상 메일 한건을 선택한 후 <strong>회수</strong> (1) 버튼을 클릭합니다. 회수 팝업이 열리면 회수를 원하는 수신자를 선택하여 발신한 메일을 회수합니다. 이미 확인이 완료된 수신자는 회수 불가능합니다.</p>
 <ol>
 <li><img alt="🙋‍♂️" class="twemoji" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@15.1.0/assets/svg/1f64b-200d-2642-fe0f.svg" title=":man_raising_hand:" /> 이동 가능화면<ul>
@@ -1899,8 +1909,9 @@
 </ul>
 </li>
 </ol>
-</div>
-<div class="tabbed-block">
+</li>
+<li>
+<p>삭제</p>
 <p class="annotate">메일을 선택한 후 <strong>삭제</strong> (1) 버튼을 클릭면 해당 메일이 휴지통으로 이동됩니다. <strong>완전삭제</strong> (2) 버튼을 이용하면 선택한 메일을 휴지통을 거치지 않고 즉시 영구적으로 삭제시킵니다. 완전삭제된 메일은 복구할 수 없습니다.</p>
 <ol>
 <li><img alt="🙋‍♂️" class="twemoji" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@15.1.0/assets/svg/1f64b-200d-2642-fe0f.svg" title=":man_raising_hand:" /> 삭제 가능화면<ul>
@@ -1923,18 +1934,16 @@
 </ul>
 </li>
 </ol>
-</div>
-<div class="tabbed-block">
-<ul>
-<li>조회된 메일 목록을 파일로 다운로드하거나 PC에 저장할 수 있으며, 목록을 인쇄하는 기능도 제공합니다.</li>
+</li>
+<li>
+<p>목록저장 및 인쇄</p>
+<p>조회된 메일 목록을 파일로 다운로드하거나 PC에 저장할 수 있으며, 목록을 인쇄하는 기능도 제공합니다.</p>
+</li>
 </ul>
-</div>
-</div>
-</div>
 <h3 id="_17"><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2zm-2 0-8 5-8-5zm0 12H4V8l8 5 8-5z"/></svg></span> 상세화면 기능</h3>
-<div class="tabbed-set tabbed-alternate" data-tabs="2:3"><input checked="checked" id="__tabbed_2_1" name="__tabbed_2" type="radio" /><input id="__tabbed_2_2" name="__tabbed_2" type="radio" /><input id="__tabbed_2_3" name="__tabbed_2" type="radio" /><div class="tabbed-labels"><label for="__tabbed_2_1">답장</label><label for="__tabbed_2_2">전달</label><label for="__tabbed_2_3">재작성</label></div>
-<div class="tabbed-content">
-<div class="tabbed-block">
+<ul>
+<li>
+<p>답장</p>
 <p class="annotate">수신한 메일에 대한 답장을 작성합니다. <strong>전체답장</strong> (1) 버튼을 이용해 전체수신자에게 답장이 가능합니다.</p>
 <ol>
 <li><img alt="🙋‍♂️" class="twemoji" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@15.1.0/assets/svg/1f64b-200d-2642-fe0f.svg" title=":man_raising_hand:" /> 답장 가능화면<ul>
@@ -1944,8 +1953,9 @@
 </ul>
 </li>
 </ol>
-</div>
-<div class="tabbed-block">
+</li>
+<li>
+<p>전달</p>
 <p class="annotate"><strong>전달</strong> (1) 버튼을 클릭하여 해당 메일을 다른 사용자에게 전달할 수 있습니다.</p>
 <ol>
 <li><img alt="🙋‍♂️" class="twemoji" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@15.1.0/assets/svg/1f64b-200d-2642-fe0f.svg" title=":man_raising_hand:" /> 전달 가능화면<ul>
@@ -1956,12 +1966,12 @@
 </ul>
 </li>
 </ol>
-</div>
-<div class="tabbed-block">
+</li>
+<li>
+<p>재작성</p>
 <p>발신 메일의 내용(제목, 수신자, 본문)을 복사하여 새로운 메일을 재작성할 수 있습니다.</p>
-</div>
-</div>
-</div>
+</li>
+</ul>
 <h2 id="_18">메일관리</h2>
 <h3 id="_19"><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2zm-2 0-8 5-8-5zm0 12H4V8l8 5 8-5z"/></svg></span> 메일함관리</h3>
 <p><strong>메일함관리</strong>는 내부메일 사용량을 확인하고, 중요한 메일을 영구 보관하기 위한 개인메일함을 관리하는 공간입니다.
@@ -1974,7 +1984,7 @@
 </li>
 <li>
 <p>기본메일함</p>
-<p>기본메일함(수신메일함, 발신메일함 등) 목록 및 정보(매일개수, 사용량(MB))를 조회할 수 있습니다. 비우기 버튼을 통해 선택한 메일함의 모든 메일을 한 번에 휴지통으로 이동시킬 수 있습니다. 휴지통을 선택하고 '비우기'를 실행하면 해당 메일들은 영구 삭제됩니다.</p>
+<p>기본메일함(수신메일함, 발신메일함 등) 목록 및 정보(매일개수, 사용량(MB))를 조회할 수 있습니다. 비우기 버튼을 통해 선택한 메일함의 모든 메일을 한 번에 휴지통으로 이동시킬 수 있습니다. 휴지통을 선택하고 비우기를 실행하면 해당 메일들은 영구 삭제됩니다.</p>
 </li>
 <li>
 <p>개인메일함</p>
@@ -1993,8 +2003,8 @@
 <li>
 <p>내부메일설정</p>
 <p>발신메일, 수신메일함, 휴지통, 차단메일함의 보관일수를 지정할 수 있고 최대보관일수는 15일 입니다. 보관일수는 시도교육청에서 설정한 최대 기간을 넘을 수 없으며, 설정된 기간이 지나면 메일은 휴지통으로 자동 이동되거나 완전 삭제됩니다.</p>
-<div class="admonition info">
-<p class="admonition-title">서명 관리 주요 기능</p>
+<details class="info">
+<summary>서명 관리 기능</summary>
 <ul>
 <li>메일 작성 시 본문 하단에 자동으로 추가될 서명을 관리할 수 있음</li>
 <li>최대 4개까지 서명을 등록할 수 있습니다.</li>
@@ -2005,7 +2015,7 @@
 </ol>
 </li>
 </ul>
-</div>
+</details>
 </li>
 <li>
 <p>자동분류규칙 관리</p>
