11월 정기배포

--- a/index.html
+++ b/index.html
@@ -1710,7 +1710,7 @@
 
 <h1 id="_1"><img alt="📚" class="twemoji" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@15.1.0/assets/svg/1f4da.svg" title=":books:" /> 업무관리 사용자교육자료</h1>
 <p>K-에듀파인 업무관리는 17개 시·도교육청과 산하기관, 1만 2천여 개의 초 ·중 ·고등학교 등에 소속된 약 70만여 명의 교직원의 행정업무에 필수적으로 사용되고 있습니다. </p>
-<p>사용자에게 업무관리에 대한 기능을 효율적으로 안내하고자 <mark><strong>온라인 교육자료를 작성중에 있습니다.</strong></mark> <span class="twemoji heart"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M14 20.408c-.492.308-.903.546-1.192.709q-.23.129-.463.252h-.002a.75.75 0 0 1-.686 0 17 17 0 0 1-.465-.252 31 31 0 0 1-4.803-3.34C3.8 15.572 1 12.331 1 8.513 1 5.052 3.829 2.5 6.736 2.5 9.03 2.5 10.881 3.726 12 5.605 13.12 3.726 14.97 2.5 17.264 2.5 20.17 2.5 23 5.052 23 8.514c0 3.818-2.801 7.06-5.389 9.262A31 31 0 0 1 14 20.408"/></svg></span></p>
+<p>사용자에게 업무관리에 대한 기능을 효율적으로 안내하고자 온라인 교육자료를 작성하였습니다. <span class="twemoji heart"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M14 20.408c-.492.308-.903.546-1.192.709q-.23.129-.463.252h-.002a.75.75 0 0 1-.686 0 17 17 0 0 1-.465-.252 31 31 0 0 1-4.803-3.34C3.8 15.572 1 12.331 1 8.513 1 5.052 3.829 2.5 6.736 2.5 9.03 2.5 10.881 3.726 12 5.605 13.12 3.726 14.97 2.5 17.264 2.5 20.17 2.5 23 5.052 23 8.514c0 3.818-2.801 7.06-5.389 9.262A31 31 0 0 1 14 20.408"/></svg></span></p>
 <figure>
   <img alt="Image title" src="images/img_01.png" />
   <figcaption>K-에듀파인 업무관리 사용자 화면</figcaption>
