--- a/01_mun-seo-gwan-ri/qna_01.html
+++ b/01_mun-seo-gwan-ri/qna_01.html
@@ -2465,6 +2465,13 @@
 <p class="admonition-title">보안공유 가능한 문서는 어떤 문서이며 보안공유문서만 모아놓은 메뉴가 따로 있나요?</p>
 <p>보안공유는 열람제한이 설정된 문서에만 지정할 수 있습니다. 보안공유 지정만을 위한 목적의 메뉴는 제공하지 않고 있습니다.</p>
 </div>
+<div class="admonition question">
+<p class="admonition-title">열람제한으로 기안한 문서에 대해서 보안공유 받은 것에 대한 로그기록을 받고 싶습니다. 특정문서에 대해 누가, 누구에게, 언제 보안공유했는지, 그리고 보안공유회수(삭제)에 대한 로그정보를 원합니다.</p>
+<ul>
+<li>문서의 보안공유 이력은 관리되고 있지 않습니다. 현재 보안공유 상태정보만 관리되고 있습니다. 따라서 <strong>보안공유 상태</strong>라면 <strong>보안공유 관련 정보(보안공유 설정일, 지정자, 지정받은자)를 확인가능</strong>, <strong>보안공유 회수 상태</strong>라면 <strong>기존 보안공유 정보 확인불가</strong>입니다.</li>
+<li>예를 들어 최초 5명에게 보안공유 지정했고 이후 2명은 보안공유를 해제하였다면, 현재 단 3명에 대해서 보안공유 정보를 확인할 수 있습니다.</li>
+</ul>
+</div>
 <h2 id="_26">문서등록대장</h2>
 <p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 16v-3c0-1.11-.89-2-2-2h-6V8h2V2H9v6h2v3H5c-1.11 0-2 .89-2 2v3H1v6h6v-6H5v-3h6v3H9v6h6v-6h-2v-3h6v3h-2v6h6v-6zM11 4h2v2h-2zM5 20H3v-2h2zm8 0h-2v-2h2zm8 0h-2v-2h2z"/></svg></span> 문서관리 → 문서함 → 문서등록대장</p>
 <div class="admonition question">
