--- a/01_mun-seo-gwan-ri/user_manual_01.html
+++ b/01_mun-seo-gwan-ri/user_manual_01.html
@@ -2923,8 +2923,8 @@
 <li>문서 처리 중 작성한 의견 정보는 공개여부 설정이 불가하고 정보공개포털 연계 항목에서 제외</li>
 </ul>
 </div>
-<details class="warning">
-<summary>직원열람제한 관련 제약사항</summary>
+<div class="admonition warning">
+<p class="admonition-title">직원열람제한 관련 제약사항</p>
 <ul>
 <li>직원열람제한, 직원열람범위의 기본값은 시도교육청 별로 총괄관리자가 설정</li>
 <li>대국민공개여부 공개 문서의 경우 직원열람제한은 설정안함만 선택가능</li>
@@ -2933,11 +2933,10 @@
 </ul>
 <p>직원열람제한 시 관련 권한은 아래와 같습니다.</p>
 <ul>
-<li>열람 권한 : 결재선, 과제카드 관리자, 총괄관리자(시도,지역), 부서장/학교장, 보안공유자, 기록물담당자(기관, 시도), 감사담당자(문서관리 감사담당자 권한), 감사담당자(감사담당자관리 메뉴에 등록된 사용자)</li>
-<li>보안공유 지정 권한 : 총괄관리자, 기록물담당자, 과제카드 관리자, 기안자, 업무담당자, 감사담당자(감사담당자관리 메뉴에 등록된 사용자)</li>
-<li>보안공유 열람 권한 : 총괄관리자(시도,지역), 기관관리자, 부서장/학교장(결재선), 과제카드 관리자, 보안공유자, 공람자, 감사담당자(문서관리 감사담당자 권한), 감사담당자(감사담당자관리 메뉴에 등록된 사용자)</li>
+<li>열람 권한 : 총괄관리자, 기록물담당자, 결재선, 과제카드 관리자, 감사담당자(감사담당자관리 메뉴에 등록된 사용자), 감사담당자(문서관리 감사담당자 권한), 공람자, 보안공유자, 부서장/학교장</li>
+<li>보안공유 지정 권한 : 총괄관리자, 기록물담당자, 결재선(기안자/업무담당자), 과제카드 관리자, 감사담당자(감사담당자관리 메뉴에 등록된 사용자)</li>
 </ul>
-</details>
+</div>
 <details class="info">
 <summary>문서암호화(DRM) 문서 관련 안내사항</summary>
 <p>문서암호화(DRM) 문서 열람절차는 아래와 같습니다.</p>
