--- a/01_mun-seo-gwan-ri/qna_01.html
+++ b/01_mun-seo-gwan-ri/qna_01.html
@@ -2566,6 +2566,15 @@
 <p class="admonition-title">이미 종료된 문서의 담당자를 재지정 하고 싶습니다. 가능한가요?</p>
 <p>종료된 문서는 결재가 완료되어 더 이상 진행 상태가 아니므로 담당자 재지정이 불가능합니다.</p>
 </div>
+<div class="admonition question">
+<p class="admonition-title">문서의 대국민공개여부 수정이력이 궁금한데 어디서 볼 수 있나요? 어떤 정보가 제공되나요?</p>
+<p>문서의 대국민공개여부 수정이력은 <strong>문서관리카드의 이력보기</strong>버튼을 통해 확인할 수 있습니다. 문서등록대장에서 확인하고 싶은 문서를 클릭하면 해당 문서의 <strong>결재선에 속한 사용자</strong>에 한해 이력보기 버튼이 제공됩니다.</p>
+<p>이력보기 기능을 통해 제공중인 정보는 아래와 같습니다.</p>
+<ul>
+<li>(생산문서) 본문, 첨부, 결재경로, 발의자, 문서이력, 대국민공개</li>
+<li>(접수문서) 결재경로, 발의자, 문서이력, 대국민공개==</li>
+</ul>
+</div>
 <h2 id="_27">비전자문서</h2>
 <p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 16v-3c0-1.11-.89-2-2-2h-6V8h2V2H9v6h2v3H5c-1.11 0-2 .89-2 2v3H1v6h6v-6H5v-3h6v3H9v6h6v-6h-2v-3h6v3h-2v6h6v-6zM11 4h2v2h-2zM5 20H3v-2h2zm8 0h-2v-2h2zm8 0h-2v-2h2z"/></svg></span> 비전자문서</p>
 <div class="admonition question">
