수정사항 문구오류 보정

--- a/01_mun-seo-gwan-ri/qna_01.html
+++ b/01_mun-seo-gwan-ri/qna_01.html
@@ -2572,7 +2572,7 @@
 <p>이력보기 기능을 통해 제공중인 정보는 아래와 같습니다.</p>
 <ul>
 <li>(생산문서) 본문, 첨부, 결재경로, 발의자, 문서이력, 대국민공개</li>
-<li>(접수문서) 결재경로, 발의자, 문서이력, 대국민공개==</li>
+<li>(접수문서) 결재경로, 발의자, 문서이력, 대국민공개</li>
 </ul>
 </div>
 <h2 id="_27">비전자문서</h2>
