--- a/02_gwah-jeh-gwan-ri/qna_02.html
+++ b/02_gwah-jeh-gwan-ri/qna_02.html
@@ -1890,6 +1890,34 @@
 <li>과제관리자 자동 지정 : 과제카드에 과제관리자가 지정되어 있지 않은 경우, 담당자 선택 목록에서 최상위에 선택된 사용자가 과제관리자로 자동 지정됩니다. </li>
 </ul>
 </div>
+<div class="admonition question">
+<p class="admonition-title">학교 근무자의 경우, 과제카드 생성 및 등록이 가능한가요?</p>
+<ul>
+<li>K-에듀파인 업무관리 시스템에서 학교 근무자도 과제카드를 생성 및 등록을 요청할 수 있습니다.</li>
+<li>과제카드 등록 및 승인 권한에 대한 상세 설명<ol>
+<li>학교의 등록 요청 권한<ul>
+<li>학교의 부서/학교 과제카드 담당자 권한을 보유한 사용자는 과제카드 등록 가능합니다.</li>
+<li>담당자 역할: 부서/학교 과제카드 담당자는 업무 성격에 맞는 단위 과제를 선택하여 과제카드를 등록 요청할 수 있습니다.</li>
+</ul>
+</li>
+<li>등록 방법<ul>
+<li>과제 카드 등록은 개별 등록 요청 외에도, 정해진 서식을 이용하여 파일을 업로드하는 방식으로 과제카드를 일괄 등록 요청할 수 있습니다.</li>
+</ul>
+</li>
+<li>최종 승인 권한 (학교 외 기관)<ul>
+<li>학교에서 등록을 요청하더라도, 해당 과제카드를 업무에 사용할 수 있도록 확정하는 최종 승인 권한은 학교에 없습니다.</li>
+<li>승인 담당자: 등록 요청된 과제 카드는 과제카드 승인 담당자 또는 시도 과제카드 담당자의 권한을 가진 사용자가 과제카드 승인함에서 검토합니다.</li>
+<li>승인 주체: 등록 요청된 과제 카드는 관할 지역청이나 시도 과제카드 담당자 가 승인 또는 반려 처리 합니다.</li>
+</ul>
+</li>
+<li>업무 개시 시점<ul>
+<li>과제카드 승인 담당자가 등록 요청 건을 승인한 후에야 바로 업무 추진이 가능해집니다.</li>
+</ul>
+</li>
+</ol>
+</li>
+</ul>
+</div>
 <h2 id="_3">과제카드</h2>
 <p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 16v-3c0-1.11-.89-2-2-2h-6V8h2V2H9v6h2v3H5c-1.11 0-2 .89-2 2v3H1v6h6v-6H5v-3h6v3H9v6h6v-6h-2v-3h6v3h-2v6h6v-6zM11 4h2v2h-2zM5 20H3v-2h2zm8 0h-2v-2h2zm8 0h-2v-2h2z"/></svg></span> 과제관리 → 과제카드관리 → 과제카드함 → 과제카드</p>
 <div class="admonition question">
