--- a/03_memo-gwan-ri/qna_04.html
+++ b/03_memo-gwan-ri/qna_04.html
@@ -1861,6 +1861,10 @@
 <p class="admonition-title">메모 작성 시 최근수신자는 무엇인가요 몇 명까지 표시되나요?</p>
 <p>메뉴얼에 따르면 메모 작성 시 최근수신자 기능은 사용자가 직전에 지정했던 수신자를 자동으로 불러와 편리하게 선택할 수 있는 기능이며, 최근 10명까지 표시</p>
 </div>
+<div class="admonition question">
+<p class="admonition-title">메모보고 작성시 보고서 작성을 위해 개인수신그룹 선택시 매번 화면이 자동으로 꺼집니다. 개인수신그룹을 선택하지 않고 수신그룹에서 일일히 선택해도 일정인원수가 넘어가면 똑같은 현상이 나타납니다.  올 상반기에 유선상으로 질의했으나. 결국 해결하지 못했습니다. 인원수는 대략 30명을 넘었을 경우 화면이 닫힙니다.</p>
+<p>문의하신 메모보고 작성 중 수신자 인원수 초과(약 30명 이상)로 인해 화면이 자동으로 닫히는 현상을 근본적으로 해결하고 정확한 기술 지원을 제공하기 위해서는 원격 접속을 통한 상세 PC 환경 점검이 필수적입니다. 사용자 지원서비스를 통해 상세한 내용으로 기술 지원을 요청해 주시기 바랍니다.</p>
+</div>
 <h2 id="_3">임시저장메모</h2>
 <p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 16v-3c0-1.11-.89-2-2-2h-6V8h2V2H9v6h2v3H5c-1.11 0-2 .89-2 2v3H1v6h6v-6H5v-3h6v3H9v6h6v-6h-2v-3h6v3h-2v6h6v-6zM11 4h2v2h-2zM5 20H3v-2h2zm8 0h-2v-2h2zm8 0h-2v-2h2z"/></svg></span> 메모관리 → 임시저장메모</p>
 <div class="admonition question">
