--- a/04_gi-rok-mool-ee-gwan/qna_05.html
+++ b/04_gi-rok-mool-ee-gwan/qna_05.html
@@ -1883,6 +1883,21 @@
 <p>미완료 상태 원인 : 해당 문서 또는 과제카드를 이미 처리했음에도 불구하고, 다시 이관과제카드수집을 진행하지 않았기 때문입니다.
 이관과제카드수집 : 문서 또는 과제카드 처리 완료 후, 다시 [이관과제카드수집]을 진행하면 정상적으로 처리 상태가 반영됩니다. 만약 미완료 문서 목록 팝업창에서 기안일시, 접수일시 등 세부 정보가 표시된다면, 해당 문서의 내용을 확인하고 미완료 문서 화면에서 상태에 따라 문서를 처리한 다음 다시 한번 이관과제카드수집을 진행해야 합니다.</p>
 </div>
+<div class="admonition question">
+<p class="admonition-title">학교에서 과제카드 이관업무 포함이 되나요?</p>
+<ul>
+<li>학교는 기록물 이관 대상에 해당하며, 관련 업무를 수행합니다.</li>
+<li>기록물 이관은 K-에듀파인 시스템에서 생성된 기록물(문서, 메모)을 기록관으로 이관 처리하는 업무로, 공공 기록물 관리에 관한 법률에 근거하여 진행됩니다.</li>
+<li>학교의 기록물 이관 대상 포함 여부 : 기록물 이관 업무의 범위에는 기관 및 학교의 공공기록물 관리가 해당됩니다.</li>
+<li>부서/학교 기록물 담당자의 주요 업무 : 부서학교 기록물 담당자는 이관할 기록물을 확인하고 정리하여 이관을 요청하는 주요 역할을 담당합니다. 해당 담당자가 <strong>기록물정리함</strong> 메뉴에서 수행하는 주요 업무 단계는 다음과 같습니다.<ol>
+<li>문서 상태 체크: 이관을 진행해야 하는 미완료 문서가 존재하는지 확인합니다. (진행 중인 문서가 없어야 다음 단계 진행 가능)</li>
+<li>이관 과제카드 수집: 이관 대상 단위 과제카드를 수집합니다. (과제카드 수집 상태는 <strong>실행대기</strong>로 변경되었다가 완료됨)</li>
+<li>기록물 정리 완료: 기록물 정리를 완료했음을 설정하여, 추가적인 이관 과제카드 수집을 차단합니다.</li>
+<li>이관 요청: 정리 완료된 기록물을 기록관으로 이관하도록 요청합니다. (기록물 정리 상태가 <strong>정리완료</strong>일 때만 이관 요청 가능)</li>
+</ol>
+</li>
+</ul>
+</div>
 <h2 id="_8">기록물정리현황</h2>
 <p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 16v-3c0-1.11-.89-2-2-2h-6V8h2V2H9v6h2v3H5c-1.11 0-2 .89-2 2v3H1v6h6v-6H5v-3h6v3H9v6h6v-6h-2v-3h6v3h-2v6h6v-6zM11 4h2v2h-2zM5 20H3v-2h2zm8 0h-2v-2h2zm8 0h-2v-2h2z"/></svg></span> 과제관리 → 기록물이관 → 기록물정리현황</p>
 <div class="admonition question">
