--- a/01_mun-seo-gwan-ri/user_manual_01.html
+++ b/01_mun-seo-gwan-ri/user_manual_01.html
@@ -3348,7 +3348,7 @@
 <p class="annotate">소속부서 (1) </p>
 <ol>
 <li><img alt="🙋‍♂️" class="twemoji" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@15.1.0/assets/svg/1f64b-200d-2642-fe0f.svg" title=":man_raising_hand:" /> 소속부서에서 사용자가 소속된 조직을 최상위로 하위부서포함 여부를 선택할 수 있으며 조직도 팝업을 통해 열람권한이 있는 특정 조직과 해당 조직의 하위부서를 포함한 문서 조회 가능<ul>
-<li><mark>하위 부서의 열람제한 문서는 기관장 권한 사용자만 열람가능</mark></li>
+<li>하위 부서의 열람제한 문서는 기관장 권한 사용자만 열람가능</li>
 </ul>
 </li>
 </ol>
@@ -3814,10 +3814,10 @@
 </ol>
 <div class="admonition tip">
 <p class="admonition-title">여러 문서의 대국민공개여부를 일괄수정 방법</p>
-<p>문서별로 개별 수정할 수도 있지만, 여러 건은 일괄변경 기능을 사용해 업무효율을 높일 수 있습니다.</p>
+<p>문서별로 개별 수정할 수도 있지만, 여러 건은 일괄수정 기능을 사용해 업무효율을 높일 수 있습니다.</p>
 <ol>
 <li>변경할 문서들을 목록에서 선택</li>
-<li>메뉴에서 대국민공개여부 일괄변경 실행</li>
+<li>메뉴에서 대국민공개여부 일괄수정 실행</li>
 <li>대국민공개여부, 직원열람범위, 직원열람제한 옵션을 지정 후 저장</li>
 </ol>
 </div>
@@ -3829,7 +3829,9 @@
 <li>한건수정 가능항목 : 과제카드명, 관련정보, 대국민공개여부, 직원열람범위, 직원열람제한, 쪽수</li>
 <li>일괄수정 가능항목 : 대국민공개여부, 직원열람범위, 직원열람제한</li>
 <li>열람제한 문서는 해당 문서의 결재선에 포함된 사용자만 수정 가능</li>
-<li>비전자문서의 경우, 문서등록대장에서 문서관리카드 상단의 수정 버튼을 통해 수정 가능</li>
+<li>비전자문서의 경우 문서등록대장에서 문서관리카드 상단의 수정 버튼을 통해 수정 가능</li>
+<li>한건수정 시 과제카드 변경기간이 아닌 경우 과제카드 돋보기 비활성화</li>
+<li>RMS로 기록물이관된 문서의 경우 한건수정, 일괄수정 불가</li>
 </ul>
 </div>
 </div>
