1/21 배포사항 적용

--- a/05_eob-mu-ji-won/qna_06.html
+++ b/05_eob-mu-ji-won/qna_06.html
@@ -1983,7 +1983,8 @@
 <p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 16v-3c0-1.11-.89-2-2-2h-6V8h2V2H9v6h2v3H5c-1.11 0-2 .89-2 2v3H1v6h6v-6H5v-3h6v3H9v6h6v-6h-2v-3h6v3h-2v6h6v-6zM11 4h2v2h-2zM5 20H3v-2h2zm8 0h-2v-2h2zm8 0h-2v-2h2z"/></svg></span> 업무지원 → 홍보관리 → 홍보요청</p>
 <div class="admonition question">
 <p class="admonition-title">학교 입학설명회를 홍보등록하려고 하면 홍보담당자는 학교의 공문접수담당자일까요?</p>
-<p>홍보 관리 업무를 담당하는 홍보담당자는 일반적인 학교의 공문 접수 담당자와는 별도의 권한을 가진 사용자입니다.</p>
+<p>홍보담당자는 교육지원청·시도교육청에 배정된 담당자이며, 학교의 공문접수담당자와는 역할이 다릅니다.
+따라서 입학설명회 홍보를 등록하려면 학교에서 홍보요청을 작성한 뒤, 교육지원청·시도교육청의 홍보담당자에게 접수 요청을 해야 합니다.</p>
 <ul>
 <li>홍보담당자의 역할 : 홍보담당자는 홍보 관련 환경을 설정하고, 일반 사용자가 요청한 홍보 건을 접수 및 처리하는 역할을 수행합니다.</li>
 <li>일반 사용자의 역할 : 일반 사용자는 홍보 요청 정보를 등록하고, 메모보고(메모작성)나 문서작성을 통해 홍보담당자에게 접수를 요청하는 기능만 수행합니다.</li>
