--- a/02_gwah-jeh-gwan-ri/qna_02.html
+++ b/02_gwah-jeh-gwan-ri/qna_02.html
@@ -1891,57 +1891,48 @@
 <p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 16v-3c0-1.11-.89-2-2-2h-6V8h2V2H9v6h2v3H5c-1.11 0-2 .89-2 2v3H1v6h6v-6H5v-3h6v3H9v6h6v-6h-2v-3h6v3h-2v6h6v-6zM11 4h2v2h-2zM5 20H3v-2h2zm8 0h-2v-2h2zm8 0h-2v-2h2z"/></svg></span> 과제관리 → 과제카드관리 → 과제카드함</p>
 <div class="admonition question">
 <p class="admonition-title">이미 종료된 과제카드를 삭제하거나 다시 사용하고 싶은데 가능한가요?</p>
-<ul>
-<li>과제카드 삭제: 사용 중인 과제카드는 카드삭제 버튼을 클릭하여 삭제할 수 있습니다. 하지만, 이미 종료된 과제카드에 실적이 존재하면 삭제 불가능합니다.과제관리는 업무 수행 내용을 전자적으로 기록·관리하는 파일철의 의미를 가지므로, 종료된 과제카드는 기록물 관리의 일환으로 보존될 가능성이 높습니다.</li>
-<li>과제카드 재사용: 과제카드 종료는 단위과제의 수행이 완료되었음을 의미하는 절차입니다. 종료된 과제카드를 다시 시작하거나 재활성화하여 새로운 업무에 사용하는 기능은 설명하고 있지 않습니다. 다만, 조직개편, 인사발령, 업무분장 조정 등의 사유로 업무 인계·인수를 수행할 수 있으며, 이 경우 과제카드가 다른 부서나 담당자에게 인계될 수 있습니다. 그러나 이는 과제카드의 업무 이관이지, 종료된 과제카드를 새로운 목적으로 재사용하는 것은 아닙니다.</li>
-</ul>
+<p>종료된 과제카드에 <strong>실적이 존재하지 않을 경우</strong>에만 삭제 가능합니다.      <br />
+시도 또는 부서 과제카드 담당자가 과제카드함 화면에서 종료된 과제카드의 <strong>종료승인을 취소</strong>합니다.
+종료요청자는 나의과제 또는 부서과제 화면에서 <strong>종료요청취소</strong>를 진행하면 과제카드 종료가 취소 완료됩니다.</p>
 </div>
 <div class="admonition question">
 <p class="admonition-title">종료된 과제카드의 이름을 새 과제카드에 사용하려고 하는데, 중복으로 인해 등록이 불가능합니다. 어떻게 해야 하나요?</p>
-<ul>
-<li>기존 종료된 과제카드 삭제 요청: 시스템 상에서 종료된 과제카드도 이름 중복 체크 대상이 되기 때문에, 해당 과제카드를 삭제하거나 이름을 변경해야 새로 동일한 이름을 사용할 수 있습니다. 다만 일반 사용자가 직접 삭제할 수 없는 경우도 있으므로, 업무담당자나 시스템 관리자에게 삭제 요청을 해야 합니다.</li>
-<li>종료된 과제카드 이름 변경: 과제카드가 삭제 불가능한 경우, 종료된 과제카드의 이름을 예: [종료] 2024 과제명처럼 바꿔 중복을 피하고, 이후 새 과제카드에 원래 이름을 사용합니다. 이름 변경 권한이 없다면 역시 관리자에게 요청해야 합니다.</li>
-<li>새 과제카드 이름에 구분자를 덧붙이기 : 위 방법들이 어렵거나 시간이 걸리는 경우, 새 과제카드 이름을 아래와 같이 변형하여 우선 등록할 수 있습니다. 예: 과제명(2025) 또는 과제명_신규</li>
-</ul>
+<p>과제카드 등록시 과제카드명을 중복 체크하며, 이때 종료된 과제카드도 포함됩니다.
+종료된 과제카드의 이름을 '[종료] 2024 과제명'처럼 바꿔 중복을 피하고, 이후 새 과제카드에 원래 이름을 사용합니다.      <br />
+만약, 종료된 과제카드의 이름변경이 어려운 경우 새 과제카드 이름을 '과제명(2025)' 또는 '과제명_신규' 등으로 구분자를 덧붙여 우선 등록할 수 있습니다.</p>
 </div>
 <div class="admonition question">
-<p class="admonition-title">신규 과제카드 등록 시 '과제카드를 사용하지 않도록 설정된 부서는 등록 및 관리기능 사용 불가' 메시지가 반복적으로 뜹니다.</p>
-<ul>
-<li>과제카드 사용 설정 상태 확인 및 요청 : 소속 기관의 시스템 관리자 또는 K-에듀파인 시도 총괄 담당자에게 문의하여야 합니다. 이는 일반 사용자가 직접 변경할 수 없는 시스템 운영 설정에 해당합니다.</li>
-</ul>
+<p class="admonition-title">신규 과제카드 등록 시 '과제카드를 사용하지 않도록 설정된 부서는 등록 및 관리기능 사용 불가' 메시지가 반복적으로 뜨는 이유는?</p>
+<p><strong>과제카드 사용여부</strong>는 시스템 운영 설정중 조직정보에 해당합니다.
+소속 기관의 시스템 관리자 또는 K-에듀파인 시도 총괄 담당자에게 문의하여 설정을 변경하시기 바랍니다.</p>
 </div>
 <div class="admonition question">
 <p class="admonition-title">조직개편으로 기관 명칭이 변경되었고, 기록물 이관까지 완료된 과제카드의 명칭도 변경하고 싶은데 가능한가요?</p>
-<ul>
-<li>과제카드 명칭 수정 권한: 과제카드 명칭 수정은 과제카드승인담당자가 수행할 수 있습니다</li>
-<li>명칭 변경 절차 : 기록물정리완료현황 화면에서 기록물정리완료취소 후, 과제카드승인담당자가 변경된 기관 명칭에 맞게 과제카드 명칭을 수정합니다. 다만, 이관 절차 재실행 시 명칭 수정 후, 다시 과제카드수집 단계부터 기록물 정리 및 이관 요청 절차를 재진행해야 합니다. </li>
-</ul>
+<p>기록물이관이 완료된 과제카드의 명칭은 변경 불가능합니다.</p>
 </div>
 <div class="admonition question">
 <p class="admonition-title">비슷한 과제카드명이 존재하는데, 하나를 삭제하고 싶어요.</p>
-<ul>
-<li>작성 중인 과제카드 삭제: 제공된 소스 자료에 따르면, 작성중인 카드에 대해서만 카드삭제 버튼을 클릭하여 삭제가 가능합니다. 이는 과제카드가 아직 공식적으로 등록되거나 사용되지 않은 임시 상태일 때를 의미합니다.</li>
-<li>이미 사용되었거나 종료된 과제카드: 만약 이미 승인되어 사용 중이었거나, 종료 처리된 과제카드라면 직접적인 삭제는 불가능합니다. 시스템은 기록 관리의 연속성을 위해 사용된 기록을 완전히 삭제하는 것을 제한하는 경우가 많습니다.</li>
-</ul>
+<p><strong>실적이 존재하지 않는 과제카드</strong>는 삭제 가능합니다.
+만약, 실적이 존재할 경우 사용하려는 과제카드로 모든 실적을 옮긴 후, 사용하지 않는 과제카드를 삭제하시면 됩니다.
+실적 이동은 과제관리 &gt; 과제카드관리 &gt; 과제카드변경 화면에서 진행하시면 됩니다.
+또한, 과제카드함 화면의 과제카드 상세팝업에서 실적관리 탭 또는 접수관리 탭의 과제카드변경 기능도 이용하실 수 있습니다.</p>
 </div>
 <div class="admonition question">
 <p class="admonition-title">과제카드가 종료된 상태라 종료된 과제카드를 다시 사용하려고 했으나, "종료된 단위과제로 등록된 단위과제카드가 포함되어 있어 종료승인취소할 수 없습니다." 라고 뜹니다. 과제카드를 다시 사용하려면 어떻게 하면 될까요?</p>
-<ul>
-<li>종료된 단위과제로 등록된 과제카드는 종료승인취소가 불가능합니다. 단위과제는 보존기간 준칙변경 또는 시도별 관리 정책에 따라 BRM 관리자가 종료 또는 종료취소 처리할 수 있습니다. 필요 시 시도 BRM 관리자에게 요청하시기 바랍니다.</li>
-<li>단위과제를 종료취소할 수 없는 경우에는, 종료된 단위과제와 유사한 성격을 가진 단위과제에 과제카드를 신규로 등록하거나, 이미 등록된 다른 과제카드를 활용할 수 있습니다.</li>
-</ul>
+<p><strong>종료된 단위과제</strong>에 등록된 과제카드는 종료승인취소가 불가능합니다.
+단위과제는 보존기간 준칙변경 또는 시도별 관리 정책에 따라 교육부총괄 BRM(기능분류체계) 관리자만 종료 처리할 수 있습니다.
+필요 시 시도 BRM 관리자에게 요청하시기 바랍니다.     <br />
+종료된 단위과제와 유사한 성격을 가진 단위과제에 과제카드를 신규로 등록하거나, 이미 등록된 다른 과제카드를 활용하시기 바랍니다.</p>
 </div>
 <div class="admonition question">
 <p class="admonition-title">이전에 있었던 선생님의 과제카드 담당자 정보를 새로운 담당자에게 일괄로 등록할 수 있는 방법을 알려 주세요.</p>
-<ul>
-<li>등록 절차 : 과제카드 -&gt; 일괄 지정 버튼 클릭 -&gt; 담당 추가 유형 선택 및 사용자 지정 -&gt; 저장(일괄적으로 새 담당자 지정) </li>
-<li>과제관리자 자동 지정 : 과제카드에 과제관리자가 지정되어 있지 않은 경우, 담당자 선택 목록에서 최상위에 선택된 사용자가 과제관리자로 자동 지정됩니다. </li>
-</ul>
+<p>과제카드함 화면에서 담당자 조건을 현재담당자 또는 이전담당자로 선택한 후 담당자 목록에서 현 담당자를 선택하고 조회합니다.
+조회된 전체 과제카드를 선택한 후 <strong>담당자일괄처리</strong> 기능을 이용하여 새로운 담당자로 일괄 변경하시면 됩니다.</p>
 </div>
 <div class="admonition question">
 <p class="admonition-title">학교 근무자의 경우, 과제카드 생성 및 등록이 가능한가요?</p>
 <ul>
-<li>K-에듀파인 업무관리 시스템에서 학교 근무자도 과제카드를 생성 및 등록을 요청할 수 있습니다.</li>
+<li>K-에듀파인 업무관리 시스템에서 학교 근무자도 과제카드를 생성 및 등록을 요청할 수 있습니다.      </li>
 <li>과제카드 등록 및 승인 권한에 대한 상세 설명<ol>
 <li>학교의 등록 요청 권한<ul>
 <li>학교의 부서/학교 과제카드 담당자 권한을 보유한 사용자는 과제카드 등록 가능합니다.</li>
@@ -1970,52 +1961,48 @@
 <p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 16v-3c0-1.11-.89-2-2-2h-6V8h2V2H9v6h2v3H5c-1.11 0-2 .89-2 2v3H1v6h6v-6H5v-3h6v3H9v6h6v-6h-2v-3h6v3h-2v6h6v-6zM11 4h2v2h-2zM5 20H3v-2h2zm8 0h-2v-2h2zm8 0h-2v-2h2z"/></svg></span> 과제관리 → 과제카드관리 → 과제카드함 → 과제카드</p>
 <div class="admonition question">
 <p class="admonition-title">기록물 이관이 완료된 과제카드의 이름(명칭)을 변경할 수 있나요?</p>
-<ul>
-<li>기록물 정리 완료 상태 : K-에듀파인 시스템에서 기록물 정리가 완료되면, 해당 기록물은 더 이상 수정이 어려우며, 기록물이 확정됩니다.</li>
-<li>명칭 변경 방법 : 기록물정리현황에서 기록물정리완료 취소 후, 과제카드승인담당자가 과제카드 명칭 변경 할 수 있음. 다만, 변경 후 과제카드수집 단계부터 다시 진행하여 기록물 정리하고 이관 요청 하여야 합니다.</li>
-</ul>
+<p>K-에듀파인 시스템에서 기록물이관이 완료되면, 해당 기록물은 더 이상 수정이 불가능합니다.</p>
 </div>
 <h2 id="_4">담당자일괄처리</h2>
-<p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 16v-3c0-1.11-.89-2-2-2h-6V8h2V2H9v6h2v3H5c-1.11 0-2 .89-2 2v3H1v6h6v-6H5v-3h6v3H9v6h6v-6h-2v-3h6v3h-2v6h6v-6zM11 4h2v2h-2zM5 20H3v-2h2zm8 0h-2v-2h2zm8 0h-2v-2h2z"/></svg></span> 과제관리 → 과제카드관리 → 과제카드함 → 과제카드 → 담당자일괄처리</p>
+<p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 16v-3c0-1.11-.89-2-2-2h-6V8h2V2H9v6h2v3H5c-1.11 0-2 .89-2 2v3H1v6h6v-6H5v-3h6v3H9v6h6v-6h-2v-3h6v3h-2v6h6v-6zM11 4h2v2h-2zM5 20H3v-2h2zm8 0h-2v-2h2zm8 0h-2v-2h2z"/></svg></span> 과제관리 → 과제카드관리 → 과제카드함 → 담당자일괄처리</p>
 <div class="admonition question">
 <p class="admonition-title">학기 초 담당자 변경으로 여러 과제카드의 담당자를 한 번에 등록하고 싶어요.</p>
-<ul>
-<li>등록 절차 : 과제카드 -&gt; 일괄 지정 버튼 클릭 -&gt; 담당 추가 유형 선택 및 사용자 지정 -&gt; 저장(일괄적으로 새 담당자 지정) </li>
-<li>과제관리자 자동 지정 : 과제카드에 과제관리자가 지정되어 있지 않은 경우, 담당자 선택 목록에서 최상위에 선택된 사용자가 과제관리자로 자동 지정됩니다.</li>
-</ul>
+<p>과제카드함 화면에서 <strong>담당자일괄처리</strong> 기능을 제공합니다.
+담당자변경이 필요한 과제카드 목록을 조회한 후 선택합니다.
+담당자일괄처리 버튼을 클릭하여 열린 담당자일괄처리 팝업에서 관리자, 담당자, 내부관계자를 일괄 처리할 수 있습니다.      <br />
+과제카드에 과제관리자가 지정되지 않으면, 담당자 선택 목록에서 최상위에 선택된 사용자가 과제관리자로 자동 지정됩니다.</p>
 </div>
 <h2 id="_5">과제담당자변경</h2>
 <p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 16v-3c0-1.11-.89-2-2-2h-6V8h2V2H9v6h2v3H5c-1.11 0-2 .89-2 2v3H1v6h6v-6H5v-3h6v3H9v6h6v-6h-2v-3h6v3h-2v6h6v-6zM11 4h2v2h-2zM5 20H3v-2h2zm8 0h-2v-2h2zm8 0h-2v-2h2z"/></svg></span> 과제관리 → 과제카드관리 → 과제카드함 → 과제카드 → 과제담당자변경</p>
 <div class="admonition question">
 <p class="admonition-title">과제카드에 담당자를 지정하려는데 해당 선생님이 목록에 나타나지 않아요.</p>
-<ul>
-<li>사용자 검색 공개 여부 설정 :  K-에듀파인 시스템에서는 개인별로 개인정보관리 메뉴에서 사용자 검색 공개 여부를 설정할 수 있도록 기능을 제공합니다. 만약 해당 선생님이 자신의 '사용자 검색 공개 여부'를 아니오로 설정해 놓았다면, 과제카드 담당자 지정 시 사용자 검색 목록에서 조회되지 않을 수 있습니다.</li>
-<li>개인정보관리 내 수정 : 개인환경설정 -&gt; 개인정보 관리 -&gt; 사용자 검색 공개 여부 설정에서 "예" 설정</li>
-</ul>
+<p>K-에듀파인 시스템에서는 개인별로 사용자 검색여부를 설정할 수 있습니다.
+만약 해당 선생님이 자신의 <strong>업무사용자 여부</strong>를 아니오로 설정해 놓았다면, 과제카드 담당자 지정 시 사용자 검색 목록에서 조회되지 않을 수 있습니다.
+해당 설정은 개인설정 &gt; 개인정보관리 화면의 업무사용자 항목에서 변경 가능합니다.</p>
 </div>
 <div class="admonition question">
 <p class="admonition-title">과제카드 담당자를 여러 명 지정하는 방법과 과제관리자와 과제담당자의 차이는 무엇인가요?</p>
+<p>과제카드함에서 담당자를 변경할 과제카드를 선택합니다.
+과제카드 상세팝업에서 과제담당자 변경 버튼을 클릭하여 담당자를 추가로 지정하실 수 있습니다.</p>
 <ul>
-<li>과제카드 담당자 여러 명 지정 방법 : 과제카드 -&gt; 일괄 지정 버튼 클릭 -&gt; 담당 추가 유형 선택 및 사용자 지정 -&gt; 저장(일괄적으로 새 담당자 지정)</li>
-<li>과제관리자 : 과제카드 정보의 수정 권한을 보유한 관리자를 지칭하며, 과제카드당 한 명만 지정될 수 있습니다</li>
-<li>과제담당자 : 단위과제 또는 관리과제를 추진하는 업무 담당자를 지칭하며, 하나의 과제카드에 대하여 여러 명의 과제담당자를 지정할 수 있습니다</li>
+<li>과제관리자: 과제카드 정보의 수정 권한을 보유한 관리자를 지칭하며, 과제카드당 한 명만 지정될 수 있습니다.</li>
+<li>과제담당자: 단위과제 또는 관리과제를 추진하는 업무 담당자를 지칭하며, 하나의 과제카드에 대하여 여러 명의 과제담당자를 지정할 수 있습니다.</li>
 </ul>
 </div>
 <h2 id="_6">과제카드변경</h2>
 <p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 16v-3c0-1.11-.89-2-2-2h-6V8h2V2H9v6h2v3H5c-1.11 0-2 .89-2 2v3H1v6h6v-6H5v-3h6v3H9v6h6v-6h-2v-3h6v3h-2v6h6v-6zM11 4h2v2h-2zM5 20H3v-2h2zm8 0h-2v-2h2zm8 0h-2v-2h2z"/></svg></span> 과제관리 → 과제카드관리 → 과제카드변경</p>
 <div class="admonition question">
 <p class="admonition-title">과제카드 실적을 변경하려고 하는데 "과제카드를 변경할 수 없습니다. 변경기간 및 변경여부를 확인바랍니다." 라고 뜹니다. 변경기간은 어떻게 수정해야하나요?</p>
-<ul>
-<li>시도총괄관리자 요청 : 변경 기간 아닐 경우 시도총괄관리자에게 요청하여야 함. 다만, 담당자의 경우 과제카드 실적 변경은 과제카드 변경할 수 있는 기간 내에서만 가능합니다.</li>
-<li>과제카드 변경 기간 설정 : 서비스공통 - 포털관리 - 운영환경설정 메뉴에서 가능합니다.</li>
-</ul>
+<p>담당자는 과제카드 변경기간 내에서만 실적을 변경할 수 있습니다.
+과제카드 변경기간이 아니라면 <strong>시도총괄관리자</strong>에게 기간변경을 요청하셔야 합니다. </p>
 </div>
 <h2 id="_7">과제카드승인함</h2>
 <p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 16v-3c0-1.11-.89-2-2-2h-6V8h2V2H9v6h2v3H5c-1.11 0-2 .89-2 2v3H1v6h6v-6H5v-3h6v3H9v6h6v-6h-2v-3h6v3h-2v6h6v-6zM11 4h2v2h-2zM5 20H3v-2h2zm8 0h-2v-2h2zm8 0h-2v-2h2z"/></svg></span> 과제관리 → 과제카드관리 → 과제카드승인함</p>
 <div class="admonition question">
 <p class="admonition-title">과제카드 등록 시 승인 절차가 필요하다고 하는데, 누가 승인할 수 있으며, 학교는 직접 승인이 가능한가요?</p>
+<p>학교는 과제카드 승인 권한이 없습니다.
+학교에서 요청한 과제카드는 관할 교육지원청 및 교육청의 과제카드승인담당자, 또는 시도과제카드담당자가 승인 가능합니다.</p>
 <ul>
-<li>학교의 직접 승인 여부 :  학교는 과제카드 승인 권한이 없습니다. 학교의 과제카드 등록 요청은 관할 교육지원청 및 교육청의 승인담당자, 또는 시도과제카드승인담당자입니다.</li>
 <li>과제카드승인담당자: 자신이 관할하는 기관에서 등록 요청한 과제카드를 승인하거나 반려할 수 있습니다.</li>
 <li>시도과제카드담당자: 모든 기관의 과제카드를 승인하거나 반려할 수 있습니다.</li>
 </ul>
@@ -2023,62 +2010,48 @@
 <div class="admonition question">
 <p class="admonition-title">신규 과제카드 등록 신청을 했는데 계속 요청 상태로 대기 중이에요. 어떻게 처리해야 하나요?</p>
 <ul>
-<li>학교의 경우 : 해당 과제카드 승인 권한이 있는 과제카드승인담당자 또는 시도과제카드담당자에게 승인을 요청해야 합니다.</li>
-<li>승인 담당자 : 과제관리 -&gt; 과제카드관리 -&gt; 과제카드승인함에서 승인 또는 반려 처리합니다. </li>
+<li>요청기관: 해당 과제카드 승인 권한이 있는 과제카드승인담당자 또는 시도과제카드담당자에게 승인을 요청해야 합니다.</li>
+<li>승인담당자: 과제관리 &gt; 과제카드관리 &gt; 과제카드승인함 화면에서 신규 과제카드 등록 요청을 승인 또는 반려 처리합니다. </li>
 </ul>
 </div>
 <h2 id="_8">과제카드인계</h2>
 <p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 16v-3c0-1.11-.89-2-2-2h-6V8h2V2H9v6h2v3H5c-1.11 0-2 .89-2 2v3H1v6h6v-6H5v-3h6v3H9v6h6v-6h-2v-3h6v3h-2v6h6v-6zM11 4h2v2h-2zM5 20H3v-2h2zm8 0h-2v-2h2zm8 0h-2v-2h2z"/></svg></span> 과제관리 → 과제카드관리 → 과제카드인계</p>
 <div class="admonition question">
 <p class="admonition-title">인수인계된 과제카드는 어떻게 확인하며, 원래 담당자가 해당 과제카드를 계속 볼 수 있나요?</p>
-<ul>
-<li>인수인계된 과제카드 확인 : 인수자는 인수함에서 인계된 과제카드 목록을 확인할 수 있습니다. 과제카드를 선택하면, 이전 담당자 정보 및 실적(문서, 메모 등)이 이관되어 있는 상태를 확인할 수 있습니다</li>
-<li>원래 담당자 열람 가능 여부: 원칙적으로 불가능합니다. 인수 절차가 완료되면 기존 담당자(인계자)는 해당 과제카드의 실적 조회 및 편철 권한을 상실하게 됩니다.</li>
-</ul>
+<p>인계자는 과제카드인계 화면, 인수자는 과제카드인수 화면에서 인계인수된 과제카드 목록 및 이관상태를 확인할 수 있습니다.    <br />
+원래 담당자는 해당 과제카드 <strong>열람이 불가능</strong>합니다.
+인수 절차가 완료되면 기존 담당자(인계자)는 해당 과제카드의 실적 조회 및 편철 권한을 상실하게 됩니다.</p>
 </div>
 <div class="admonition question">
 <p class="admonition-title">과제카드를 다른 부서로 인계인수할 때 유의할 점이 있나요?</p>
-<ul>
-<li>종료된 과제카드만 인계 가능: 인계 등록 팝업에서 종료된 과제카드 목록 중 인계할 과제카드를 선택해야 합니다</li>
-<li>미이관 기록물 발생 가능성: 조직 변경 등의 이유로 기록물 이관이 완료된 처리과에 과제카드를 인계인수할 경우, 해당 처리과에 미이관 과제카드가 발생할 수 있습니다</li>
-<li>나이스 코드 변경 없는 조직 개편: 조직개편으로 명칭이 변경되었으나 나이스 코드가 변경되지 않은 경우, 기존 조직 정보가 수정된 것으로 간주되므로 변경 처리과에서 이관을 진행해야 합니다</li>
-<li>폐지된 부서의 과제카드 인수: 폐지된 부서의 과제카드를 신설 부서가 나이스 코드를 그대로 사용하며 인수받는 경우, 전년도 실적이 존재하여 미종결 과제가 표시될 수 있습니다. 이 경우, 인수받은 부서에서 해당 미종결 과제카드 또는 미완료 문서를 진행 또는 완료 처리해야 합니다</li>
-<li>삭제: 이관 기간 설정</li>
-</ul>
+<p>인계 등록시 부서내 종료된 과제카드만 조회되며, 해당 목록에서 인계할 과제카드를 선택해야 합니다.    <br />
+조직 변경 등의 이유로 기록물 이관이 완료된 처리과에 과제카드를 인계인수할 경우, 해당 처리과에 미이관 과제카드가 발생할 수 있습니다.</p>
 </div>
 <div class="admonition question">
 <p class="admonition-title">예산이 연결된 과제카드를 인계인수할 때, 예산 이체를 먼저 해야 하나요?</p>
-<ul>
-<li>예산 이체 절차 : 예산 잔액 확인, 예산 이체 요청 후 과제카드 인계인수 진행하여야 합니다.</li>
-<li>유의 사항 : 예산 이체 없이 과제카드만 인계하면, 새 부서에서는 결의나 집행이 불가능합니다. 반대로, 예산 이체만 하고 과제카드를 인계하지 않으면 업무실적과 예산의 소관이 불일치되어 감사 시 문제될 수 있습니다.</li>
-</ul>
+<p>과제카드 인계인수와 예산이체는 별도의 작업으로 과제카드 인계인수시 예산이체를 강제하지 않습니다.
+그러므로, 인계인수시 업무 참고용으로만 예산의 존재여부를 알려줍니다.    <br />
+다만, 예산 이체 없이 과제카드만 인계하면, 새 부서에서는 결의나 집행이 불가능합니다.
+반대로, 예산 이체만 하고 과제카드를 인계하지 않으면 업무실적과 예산의 소관이 불일치되어 감사 시 문제될 수 있습니다.</p>
 </div>
 <h2 id="_9">과제카드인수</h2>
 <p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 16v-3c0-1.11-.89-2-2-2h-6V8h2V2H9v6h2v3H5c-1.11 0-2 .89-2 2v3H1v6h6v-6H5v-3h6v3H9v6h6v-6h-2v-3h6v3h-2v6h6v-6zM11 4h2v2h-2zM5 20H3v-2h2zm8 0h-2v-2h2zm8 0h-2v-2h2z"/></svg></span> 과제관리 → 과제카드관리 → 과제카드인수</p>
 <div class="admonition question">
-<p class="admonition-title">인수부서의 인수접수 상태 과제카드를 기존과제카드로 이관 버튼을 누르면 콤보박스에서 사전에 등록한 기존과제카드 명을 불러올 수 없습니다.</p>
-<ul>
-<li>인수부서에 기존 과제카드 미등록 : 과제카드를 사전 등록하고 진행 중 상태로 유지 하여 해결</li>
-<li>기능분류코드 불일치 : 이관 대상 과제카드와 기존과제카드의 기능분류코드가 다를 경우, 목록에 불러올 수 없습니다. 두 과제카드의 기능분류가 같은지 확인 또는 기능분류가 다르면 기존과제카드를 신규 등록합니다.</li>
-<li>기존과제카드 종료됨 : 해당 과제카드의 종료승인을 취소한 뒤 다시 시도해야 합니다.</li>
-<li>권한 또는 시스템 오류 : 상기 3가지 방법이 안될 경우, 담당자 권한 확인 및 사용자 지원 서비스에 문의바랍니다.</li>
-</ul>
+<p class="admonition-title">인수부서의 인수접수 상태 과제카드를 기존과제카드로 이관 버튼을 누르면 콤보박스에서 사전에 등록한 기존과제카드 명을 불러올 수 없다고 하는데 이유는?</p>
+<p>인수부서에 인수하려는 과제카드와 <strong>동일한 단위과제</strong>로 만들어진 과제카드가 존재하지 않으면 이관대상과제카드선택이 불가능합니다.
+<strong>신규과제카드</strong>로 이관을 진행하거나, 이관 전 <strong>동일한 단위과제</strong>로 과제카드를 미리 생성하시기 바랍니다. </p>
 </div>
 <h2 id="_10">나의과제</h2>
 <p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 16v-3c0-1.11-.89-2-2-2h-6V8h2V2H9v6h2v3H5c-1.11 0-2 .89-2 2v3H1v6h6v-6H5v-3h6v3H9v6h6v-6h-2v-3h6v3h-2v6h6v-6zM11 4h2v2h-2zM5 20H3v-2h2zm8 0h-2v-2h2zm8 0h-2v-2h2z"/></svg></span> 과제관리 → 나의과제</p>
 <div class="admonition question">
-<p class="admonition-title"> 과제카드를 종료하려고 하는데 정리완료된 과제카드가 존재한다 또는 진행 중인 실적이 있어 종료가 안 된다는 메시지가 뜹니다.</p>
-<ul>
-<li>정리완료된 과제카드 존재할 경우 : 기록물 정리가 완료된 과제카드는 더 이상 수정이 어려운 확정된 상태입니다. 이 경우, 기록물정리완료취소 후 진행하며 과제카드수집부터 다시 진행하여 기록물을 정리 및 이관 요청하여야 합니다.</li>
-<li>진행 중인 설적이 있어 종료가 안될 경우 : 실적/접수관리에서 진행 중인 문서를 확인하고 문서관리 메뉴를 통해 해당 문서를 처리해야 합니다. 진행 중인 실적이 모두 완료되어야 과제카드를 종료할 수 있습니다.</li>
-</ul>
+<p class="admonition-title">과제카드를 종료하려고 하는데 정리완료된 과제카드가 존재한다 또는 진행 중인 실적이 있어 종료가 안 된다는 메시지가 뜨는데 왜일까요?</p>
+<p>해당 과제카드를 포함한 처리과가 기록물이관 진행 전이라면, 기록물정리함 또는 기록물정리현황 화면에서 기록물 정리완료를 취소할 수 있습니다.     <br />
+진행중인 실적이 있어 종료가 안될 경우 문서관리 메뉴에서 해당 실적을 모두 완료하여야 과제카드 종료할 수 있습니다.</p>
 </div>
 <div class="admonition question">
-<p class="admonition-title">조직개편 후 과제카드를 인수받았는데 목록에 보이지 않습니다.</p>
-<ul>
-<li>인수인계 미완료 : 과제카드가 다른 부서로 이관(인수인계)되었으나 사용자에게 담당자로 지정되지 않았거나, 인수인계 절차가 완료되지 않은 경우 발생할 수 있습니다. 인계받은 과제카드는 과제카드함 화면에서 조회 가능합니다. 나의과제 또는 부서과제에서는 타 부서로 인계된 과제카드는 현 해당 부서에서 조회되지 않습니다.</li>
-<li>권한 문제 : 과제카드 담당자로 지정되었는지 확인이 필요하며, 담당자로 지정되지 않았다면 해당 과제카드를 볼 수 없습니다. 과제카드 담당 선생님께 과제카드함에서 과제카드 상세 클릭 후 과제담당자변경 버튼을 눌러 담당자 등록을 요청해야 합니다.</li>
-</ul>
+<p class="admonition-title">조직개편 후 과제카드를 인수받았는데 목록에 보이지 않는데 이유는?</p>
+<p>과제카드 인계인수 절차가 완료되지 않거나, 인계받은 과제카드에 담당자로 지정되지 않으면 조회가 불가능합니다.
+부서(학교) 과제카드 담당자에게 요청하여 과제카드 인계인수 완료 확인 및 담당자 권한 부여 요청하시기 바랍니다.</p>
 </div>
 
 
