--- a/02_gwah-jeh-gwan-ri/qna_03.html
+++ b/02_gwah-jeh-gwan-ri/qna_03.html
@@ -1783,78 +1783,62 @@
 <p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 16v-3c0-1.11-.89-2-2-2h-6V8h2V2H9v6h2v3H5c-1.11 0-2 .89-2 2v3H1v6h6v-6H5v-3h6v3H9v6h6v-6h-2v-3h6v3h-2v6h6v-6zM11 4h2v2h-2zM5 20H3v-2h2zm8 0h-2v-2h2zm8 0h-2v-2h2z"/></svg></span> 업무인계인수 → 인계함</p>
 <div class="admonition question">
 <p class="admonition-title">업무 인계인수 시 인계자의 영구열람제한 문서는 인수자에게 어떻게 공유되나요?</p>
-<ul>
-<li>자동 공유 : 업무 인계인수 시 인계자가 작성한 영구열람제한 문서는 인수자에게 자동으로 보안 처리되어 공유됩니다.</li>
-<li>미인계 문서 명시적 제외 방법 : 인계자가 해당 문서 중 인계하지 않을 문서를 명시적으로 제외할 수 있습니다. 인수자는 인계자가 제외한 목록은 확인할 수 있지만, 해당 문서의 상세 내용은 열람할 수 없습니다.</li>
-</ul>
+<p>업무 인계인수 시 인계자가 작성한 영구열람제한 문서는 인수자에게 자동으로 보안 처리되어 공유됩니다.
+인계자가 해당 문서를 인계하고 싶지 않다면 인계신청시 업무현황에서 제외할 수 있습니다.
+인수자는 인계자가 제외한 목록은 확인할 수 있지만, 해당 문서의 상세 내용은 열람할 수 없습니다.</p>
 </div>
 <div class="admonition question">
 <p class="admonition-title">업무 인계인수 시 인계자가 선택한 과제카드의 인수자는 자동으로 과제담당자로 등록되나요?</p>
-<ul>
-<li>업무 인계인수 시, 인계자는 과제카드에 등록된 본인의 담당 권한을 인수자에게 이관합니다.</li>
-<li>아래 절차가 완료되면, 인수자는 해당 과제카드의 <strong>과제담당자</strong>로 자동 지정됩니다.<ol>
+<p>업무 인계인수 시, 인계자는 과제카드에 등록된 본인의 담당 권한을 인수자에게 이관합니다.
+인계자가 해당 과제카드의 과제담당자 권한을 가진 상태로 아래 절차가 완료되면, 인수자는 과제카드의 <strong>과제담당자</strong>로 자동 지정됩니다.</p>
+<ol>
 <li>입회자의 입회확인 완료</li>
-<li>인수자가 인계 부서로 이동하거나, 인계자의 인사발령이 완료된 경우</li>
+<li>인수자가 인계 부서로 인사이동</li>
 <li>익일 새벽 시스템 배치 동작(인수자·인계자 정보 확인) 시점에 자동 적용</li>
 </ol>
-</li>
-</ul>
 </div>
 <div class="admonition question">
 <p class="admonition-title">업무인계인수 시 과제관리자가 후임에게 인계되지 않는 문제와 관련하여 과제카드 담당자/관리자 권한은 어떻게 처리되나요?</p>
-<ul>
-<li>업무인계인수 시, 과제카드 담당자 및 관리자 권한은 인계 대상에 포함됩니다.
-다만, 인계자가 동일 부서 내에 계속 존재하는 경우, 업무 인계인수 처리가 완료되었더라도 과제카드 담당자가 자동으로 변경되지 않는 경우가 발생할 수 있습니다.
-또한, 인수자가 인계자의 부서로 이동하지 않은 상태에서도 시스템상 인수 완료 처리가 되지 않습니다.
-따라서, 인수자가 인계자의 부서로 이동하고, 입회자의 확인이 완료되어야 최종 완료 상태가 되며, 익일 새벽 시스템 배치에 의해 업무 인계인수 정보가 반영되어 과제카드 담당자/관리자 권한이 자동 적용됩니다.</li>
-<li>과제카드별 담당자 또는 관리자 권한을 수동으로 변경하려면, 과제관리 &gt; 과제카드관리 &gt; 과제카드함 메뉴에서 해당 과제카드를 선택한 후, 담당자변경 버튼을 통해 직접 수정할 수 있습니다.</li>
-</ul>
+<p>업무인계인수 시, 과제카드 담당자 및 관리자 권한은 인계 대상에 포함됩니다.
+인수자가 인계자의 부서로 이동하고, 입회자의 확인이 완료되어야 최종 완료 상태가 되며, 익일 새벽 시스템 배치에 의해 업무 인계인수 정보가 반영되어 과제카드 담당자/관리자 권한이 자동 적용됩니다. <br />
+만약, 인계자가 동일 부서 내에 계속 존재하는 경우 아래와 같이 권한 변경이 발생합니다.
+인계자가 과제카드 관리자 권한을 보유하고 있다면 인수자에게 해당권한이 이양되고, 인계자는 과제카드 담당자로 변경됩니다.
+인계자가 과제카드 담당자 권한을 보유하고 있다면 인수자, 인계자 모두 과제카드 담당자로 지정됩니다.
+다만, 인계자가 부서이동한 경우 인수자만 권한을 가지게 됩니다.   <br />
+과제카드별 담당자 또는 관리자 권한을 수동으로 변경하려면, 과제관리 &gt; 과제카드관리 &gt; 과제카드함 메뉴에서 해당 과제카드를 선택한 후, 담당자변경 버튼을 통해 직접 수정할 수 있습니다.</p>
 </div>
 <div class="admonition question">
 <p class="admonition-title">업무인계인수 시 파견 중인 직원을 인수자로 선택할 수 없나요?</p>
-<ul>
-<li>인수자 선택 불가 기준 : 현재 소속 조직(부서)에 정상적으로 등록된 사용자여야 하며 조직 인사정보상 파견자, 휴직자, 퇴직자는 인수자 목록에 나타나지 않습니다.</li>
-<li>파견자가 실질적 인계 받을 경우 : 파견 기간 동안 소속 부서에 임시 등록 요청하여 인수자로 지정하여야 합니다.</li>
-</ul>
+<p>업무인계인수 시 파견 중인 직원을 인수자로 지정할 수 있습니다.
+다만, 조직도에 파견 기관이 조회되는 경우에만 인수자로 조회·지정 가능하며, 조직도에 없을 경우 인수자로 지정할 수 없습니다.</p>
 </div>
 <div class="admonition question">
-<p class="admonition-title">신규 발령된 직원을 업무인계인수의 인수자로 선택할 때 조회되지 않습니다.</p>
-<ul>
-<li>인수자 기준 : 현재 소속 조직(부서)에 정상적으로 등록된 사용자여야 하며 조직 인사정보상 파견자, 휴직자, 퇴직자는 인수자 목록에 나타나지 않습니다.</li>
-<li>파견자가 실질적 인계 받을 경우 : 파견 기간 동안 소속 부서에 임시 등록 요청하여 인수자로 지정하여야 합니다.</li>
-</ul>
+<p class="admonition-title">신규 발령된 직원을 업무인계인수의 인수자로 선택할 때 조회되지 않는 이유는?</p>
+<p>현재 소속 조직(부서)에 정상적으로 등록된 사용자만 인수자로 선택 가능합니다.
+해당 직원의 현재 소속을 확인한 후 인수 진행하시기 바랍니다. </p>
 </div>
 <h2 id="_3">입회함</h2>
 <p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 16v-3c0-1.11-.89-2-2-2h-6V8h2V2H9v6h2v3H5c-1.11 0-2 .89-2 2v3H1v6h6v-6H5v-3h6v3H9v6h6v-6h-2v-3h6v3h-2v6h6v-6zM11 4h2v2h-2zM5 20H3v-2h2zm8 0h-2v-2h2zm8 0h-2v-2h2z"/></svg></span> 업무인계인수 → 입회함</p>
 <div class="admonition question">
-<p class="admonition-title"> 업무인계인수 최종 완료 후에도 인계자에게 단위과제카드가 그대로 남아있고 과제담당자로 지정되어 있는 문제가 발생합니다.</p>
-<ul>
-<li>인계자가 동일 부서에 계속 남아 있는 경우 담당자 변경이 반영되지 않을 수 있습니다. 이 경우 수동 보정이 필요합니다.</li>
-<li>과제카드함에서 대상 카드를 열어 표제부 탭의 과제카드 담당자 영역의 변경 버튼으로 담당자를 수정합니다.</li>
-<li>과제카드함 목록에서 여러 카드를 선택해 담당자일괄처리로 담당자를 한 번에 지정할 수 있습니다.</li>
-</ul>
+<p class="admonition-title">업무인계인수 최종 완료 후에도 인계자에게 단위과제카드가 그대로 남아있고 과제담당자로 지정되어 있는 문제가 발생하는데 해결방법은?</p>
+<p>인계자가 동일 부서에 계속 남아 있는 경우 과제카드 담당자 권한이 유지되며, 인수자에게 동일한 권한이 부여됩니다.
+인계자의 권한은 인사이동시 제거됩니다.     <br />
+만약, 인계자가 인사이동 전 권한을 제거해야하는 직접 수정하셔야합니다.
+과제카드함에서 대상 카드를 열어 표제부 탭의 과제카드 담당자 영역의 변경 버튼으로 담당자를 수정합니다.
+과제카드함 목록에서 여러 카드를 선택해 담당자일괄처리로 담당자를 한 번에 지정할 수도 있습니다.</p>
 </div>
 <div class="admonition question">
-<p class="admonition-title">인수자가 발령일자에 맞춰 부서이동을 했음에도 업무인계인수 최종 완료가 되지 않고 과제담당자로 변경되지 않는 문제가 발생했습니다.</p>
-<ul>
-<li>업무인계인수 최종 완료 처리 누락 여부 확인 : 인계자, 인수자, 입회자 중 누구 하나라도 '확인'을 누르지 않으면, 인계서가 진행 중 상태로 남습니다. 시스템상 진행 중이면 실적 이관은 완료되지만, 권한 및 담당자 반영은 되지 않습니다.</li>
-<li>과제담당자 수동 등록 : 업무인계인수 완료와 과제담당자 등록은 자동 연동되지 않습니다. 인수자에게 과제담당자 권한을 부여하려면, 담당자를 수동으로 지정해야 합니다. 과제관리 -&gt; 과제카드관리 -&gt; 과제카드함 -&gt; 상세조회 &gt; [담당자변경]</li>
-</ul>
+<p class="admonition-title">인수자가 발령일자에 맞춰 부서이동을 했음에도 업무인계인수 최종 완료가 되지 않고 과제담당자로 변경되지 않는 문제가 발생하는데 이유는?</p>
+<p>인계자, 인수자, 입회자 중 누구 하나라도 <strong>확인</strong>을 누르지 않으면, 인계서가 진행 중 상태로 남아 업무인계인수가 처리되지 않습니다.
+또한, 입회자의 입회 확인후 익일 새벽 1시 인수인계가 자동 처리되며, 이때 부서 이동상태를 확인하므로 입회 확인과 인수자의 부서를 확인하시기 바랍니다. </p>
 </div>
 <h2 id="_4">부서(학교)업무인계인수함</h2>
 <p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 16v-3c0-1.11-.89-2-2-2h-6V8h2V2H9v6h2v3H5c-1.11 0-2 .89-2 2v3H1v6h6v-6H5v-3h6v3H9v6h6v-6h-2v-3h6v3h-2v6h6v-6zM11 4h2v2h-2zM5 20H3v-2h2zm8 0h-2v-2h2zm8 0h-2v-2h2z"/></svg></span> 업무인계인수 → 부서(학교)업무인계인수함</p>
 <div class="admonition question">
 <p class="admonition-title">업무인계인수 건의 입회자를 변경하고 싶습니다.</p>
-<ul>
-<li>변경 절차 : 업무인계인수 -&gt; 업무인계인수관리 -&gt; 부서업무인계인수관리함 -&gt; 입회자 선택(진행 상태가 인수요청 또는 인수확인인 경우 가능) -&gt; 저장</li>
-</ul>
-</div>
-<div class="admonition question">
-<p class="admonition-title">실수로 삭제된 업무인계인수서를 복구할 수 있나요?</p>
-<ul>
-<li>삭제 복구 기능 미제공 : 업무인계인수서 작성 후 삭제 버튼 클릭 시 즉시 삭제되며, 이를 복구하는 기능은 시스템적으로 제공되지 않습니다.</li>
-<li>재작성 진행 : 동일한 인계자, 인수자, 입회자를 기준으로 새롭게 업무인계인수서를 작성해야 합니다.</li>
-</ul>
+<p>인수자, 인계자별로 인수확인취소, 인수요청취소 등의 기능을 이용하여 인수요청상태를 <strong>작성중</strong>으로 되돌린 후 인계신청 상세에서 입회자를 변경합니다.   <br />
+권한자의 경우 업무인계인수 &gt; 업무인계인수관리 &gt; 부서업무인계인수관리함 화면에서 담당업무를 선택한 후 인계신청상세조회 팝업에서 입회자 변경하고 저장하시면 됩니다.
+진행 상태가 인수요청 또는 인수확인인 인계인수만 변경 가능합니다.</p>
 </div>
 
 
