--- a/06_il-jung-gwan-ri/qna_08.html
+++ b/06_il-jung-gwan-ri/qna_08.html
@@ -1819,11 +1819,13 @@
 <p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 16v-3c0-1.11-.89-2-2-2h-6V8h2V2H9v6h2v3H5c-1.11 0-2 .89-2 2v3H1v6h6v-6H5v-3h6v3H9v6h6v-6h-2v-3h6v3h-2v6h6v-6zM11 4h2v2h-2zM5 20H3v-2h2zm8 0h-2v-2h2zm8 0h-2v-2h2z"/></svg></span> 업무관리 → 일정관리 → 일정현황</p>
 <div class="admonition question">
 <p class="admonition-title">등록된 일정을 달력이나 목록 형태로 조회하려면 어떻게 해야 하나요?</p>
-<p>등록된 일정은 일정현황 메뉴에서 캘린더(월/주/일) 화면이나 목록 조회 화면을 통해 확인할 수 있으며, 제목을 클릭하면 상세일정도 조회할 수 있습니다.</p>
+<p>등록된 일정은 일정현황 화면에서 달력 탭 또는 목록 탭을 선택하여 원하는 형태로 조회 가능합니다.
+전체, 개인 등 공유범위를 지정하거나, 달력 형태에서는 월·주·일을 구분해서 일정을 조회할 수 있습니다.</p>
 </div>
 <div class="admonition question">
 <p class="admonition-title">기관장 일정을 등록하고 하위 조직과 공유하려면 어떻게 해야 하나요?</p>
-<p>기관장 일정은 교육청일정담당자만 등록 가능하며, 등록 후에는 공개 범위를 기관 전체나 하위 조직까지 설정하여 공유할 수 있습니다.</p>
+<p>기관장 일정은 교육청일정담당자만 등록 가능하며, 일정등록 진행시 일정등록구분 항목목에서 기관장일정을 선택하시면 됩니다.
+공개범위 항목을 하위조직공유로 설정하여 등록을 완료하면 일정등록이 완료됩니다.</p>
 </div>
 <h2 id="_3">일정작성 일괄파일업로드</h2>
 <p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 16v-3c0-1.11-.89-2-2-2h-6V8h2V2H9v6h2v3H5c-1.11 0-2 .89-2 2v3H1v6h6v-6H5v-3h6v3H9v6h6v-6h-2v-3h6v3h-2v6h6v-6zM11 4h2v2h-2zM5 20H3v-2h2zm8 0h-2v-2h2zm8 0h-2v-2h2z"/></svg></span> 업무관리 → 일정관리 → 일정현황 → 일정작성 일괄파일업로드</p>
