--- a/07_mail/qna_09.html
+++ b/07_mail/qna_09.html
@@ -1930,18 +1930,15 @@
 <p>내부메일 주소는 사용자가 직접 재설정할 수 없으며, <strong>수신자 검색 기능(개인, 조직도, 사용자 그룹 조회)</strong>을 통해 다시 확인해야 합니다.</p>
 </div>
 <div class="admonition question">
-<p class="admonition-title">업무 메일을 발송했는데 수신자가 내용을 볼 수 없거나 빈 화면으로 보입니다 왜 그런가요?</p>
-<p>해당 현상은 브라우저에 남은 캐시로 인해 메일 뷰어가 정상적으로 실행되지 않아 발생한 문제입니다.
-현재는 개선이 완료되어 해당 문제가 발생하지 않습니다.</p>
-</div>
-<div class="admonition question">
-<p class="admonition-title">내부메일 작성 화면의 제목란이 회색으로 비활성화되어 메일을 작성할 수 없습니다. 어떻게 처리하나요?</p>
-<p>해당 현상은 브라우저에 남은 캐시로 인해 메일 에디터가 정상적으로 실행되지 않아 발생한 문제입니다.
-현재는 개선이 완료되어 해당 문제가 발생하지 않습니다.</p>
-</div>
-<div class="admonition question">
 <p class="admonition-title">내부메일 작성 시 '보안'이나 '예약 발신'과 같은 특별한 옵션들을 사용할 수 있나요?</p>
-<p>내부메일 작성 시 <strong>보안, 긴급, 발신메일저장, 수신자개별발송, 예약 발신</strong> 등의 옵션을 선택할 수 있으며, 예약 발신은 배치 처리되므로 지정 시간보다 늦게 발송될 수 있습니다.</p>
+<p>내부메일 작성 시 보안, 긴급, 발신메일저장, 수신자개별발송, 예약 발신 옵션을 선택할 수 있습니다.</p>
+<ul>
+<li>보안: 수신자가 메일 확인 시 인증서 비밀번호 입력 후 열람가능</li>
+<li>긴급: 수신자의 수신메일목록 최상단에 노출</li>
+<li>발신메일저장: 발신자의 발신메일함에서 메일확인 가능 (회수 등 처리를 위해 체크 권유)  </li>
+<li>수신자개별발송: 수신자는 본인 외 타수신자 확인 불가</li>
+<li>예약발신: 예약 설정한 일시에 메일 발신처리, 배치로 처리되므로 지정 시간보다 늦게 발송될 수 있음</li>
+</ul>
 </div>
 <h2 id="_3">수신자 검색</h2>
 <p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 16v-3c0-1.11-.89-2-2-2h-6V8h2V2H9v6h2v3H5c-1.11 0-2 .89-2 2v3H1v6h6v-6H5v-3h6v3H9v6h6v-6h-2v-3h6v3h-2v6h6v-6zM11 4h2v2h-2zM5 20H3v-2h2zm8 0h-2v-2h2zm8 0h-2v-2h2z"/></svg></span> 내부메일 → 메일작성 → 수신자 검색</p>
@@ -2001,7 +1998,8 @@
 <p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 16v-3c0-1.11-.89-2-2-2h-6V8h2V2H9v6h2v3H5c-1.11 0-2 .89-2 2v3H1v6h6v-6H5v-3h6v3H9v6h6v-6h-2v-3h6v3h-2v6h6v-6zM11 4h2v2h-2zM5 20H3v-2h2zm8 0h-2v-2h2zm8 0h-2v-2h2z"/></svg></span> 서비스공통 → 포털관리 → 운영환경관리 → 내부메일 환경설정</p>
 <div class="admonition question">
 <p class="admonition-title">내부메일의 보관 기간은 어떻게 설정하며, 변경이 가능한가요?</p>
-<p>내부메일의 보관 기간은 <strong>시도총괄관리자가 내부메일 환경설정에서 발신·수신·휴지통·차단 메일함별 보관일수를 지정</strong>하며, 필요 시 변경할 수 있습니다.</p>
+<p>내부메일의 보관 기간은 내부메일 &gt; 메일관리 &gt; 내부메일설정 화면에서 각 메일함별로 지정할 수 있습니다.    <br />
+단, 보관 일수별 최대 일수는 시도총괄관리자가 서비스공통 &gt; 포털관리 &gt; 운영환경관리 &gt; 내부메일 환경설정 화면에서 설정한 값으로 제한됩니다.</p>
 </div>
 <h2 id="_11">내부메일금칙어관리</h2>
 <p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 16v-3c0-1.11-.89-2-2-2h-6V8h2V2H9v6h2v3H5c-1.11 0-2 .89-2 2v3H1v6h6v-6H5v-3h6v3H9v6h6v-6h-2v-3h6v3h-2v6h6v-6zM11 4h2v2h-2zM5 20H3v-2h2zm8 0h-2v-2h2zm8 0h-2v-2h2z"/></svg></span> 서비스공통 → 포털관리 → 운영환경관리 → 내부메일 환경설정 → 내부메일금칙어관리</p>
@@ -2013,7 +2011,9 @@
 <p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 16v-3c0-1.11-.89-2-2-2h-6V8h2V2H9v6h2v3H5c-1.11 0-2 .89-2 2v3H1v6h6v-6H5v-3h6v3H9v6h6v-6h-2v-3h6v3h-2v6h6v-6zM11 4h2v2h-2zM5 20H3v-2h2zm8 0h-2v-2h2zm8 0h-2v-2h2z"/></svg></span> 서비스공통 → 포털관리 → 운영환경관리 → 내부메일 환경설정 → 대용량송신사용자관리</p>
 <div class="admonition question">
 <p class="admonition-title">학교장 직급의 교직원에게만 대량으로 내부 메일을 발송할 수 있나요?</p>
-<p>내부메일 환경설정의 대량송신 사용자관리에서 학교장 직급의 교직원을 대상으로 대량송신 권한을 부여하면 해당 그룹에만 대량 메일을 발송할 수 있습니다</p>
+<p>메일작성중 수신자 검색시 직위, 직급명으로 사용자를 구분하여 조회 및 등록할 수 있습니다.
+매번 조회가 번거로울 경우 수신자검색 팝업에서 <strong>개인수신그룹등록</strong> 기능을 이용하여 선택된 수신자를 개인수신그룹으로 등록하실 수 있습니다.     <br />
+내부메일 대량발송은 시도총괄관리자에 의해 지정된 <strong>대량송신 사용자</strong>만 가능합니다. </p>
 </div>
 
 
